sdk/appcontainers/arm-appcontainers/samples/v2/javascript/README.md
# client library samples for JavaScript

These sample programs show how to use the JavaScript client libraries for in some common scenarios.

| **File Name**                                                                                                         | **Description**                                                                                                                                                                                                                         |
| --------------------------------------------------------------------------------------------------------------------- | --------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------- |
| [availableWorkloadProfilesGetSample.js][availableworkloadprofilesgetsample]                                           | Get all available workload profiles for a location. x-ms-original-file: specification/app/resource-manager/Microsoft.App/stable/2025-01-01/examples/AvailableWorkloadProfiles_Get.json                                                  |
| [billingMetersGetSample.js][billingmetersgetsample]                                                                   | Get all billingMeters for a location. x-ms-original-file: specification/app/resource-manager/Microsoft.App/stable/2025-01-01/examples/BillingMeters_Get.json                                                                            |
| [certificatesCreateOrUpdateSample.js][certificatescreateorupdatesample]                                               | Create or Update a Certificate. x-ms-original-file: specification/app/resource-manager/Microsoft.App/stable/2025-01-01/examples/Certificate_CreateOrUpdate.json                                                                         |
| [certificatesDeleteSample.js][certificatesdeletesample]                                                               | Deletes the specified Certificate. x-ms-original-file: specification/app/resource-manager/Microsoft.App/stable/2025-01-01/examples/Certificate_Delete.json                                                                              |
| [certificatesGetSample.js][certificatesgetsample]                                                                     | Get the specified Certificate. x-ms-original-file: specification/app/resource-manager/Microsoft.App/stable/2025-01-01/examples/Certificate_Get.json                                                                                     |
| [certificatesListSample.js][certificateslistsample]                                                                   | Get the Certificates in a given managed environment. x-ms-original-file: specification/app/resource-manager/Microsoft.App/stable/2025-01-01/examples/Certificates_ListByManagedEnvironment.json                                         |
| [certificatesUpdateSample.js][certificatesupdatesample]                                                               | Patches a certificate. Currently only patching of tags is supported x-ms-original-file: specification/app/resource-manager/Microsoft.App/stable/2025-01-01/examples/Certificates_Patch.json                                             |
| [connectedEnvironmentsCertificatesCreateOrUpdateSample.js][connectedenvironmentscertificatescreateorupdatesample]     | Create or Update a Certificate. x-ms-original-file: specification/app/resource-manager/Microsoft.App/stable/2025-01-01/examples/ConnectedEnvironmentsCertificate_CreateOrUpdate.json                                                    |
| [connectedEnvironmentsCertificatesDeleteSample.js][connectedenvironmentscertificatesdeletesample]                     | Deletes the specified Certificate. x-ms-original-file: specification/app/resource-manager/Microsoft.App/stable/2025-01-01/examples/ConnectedEnvironmentsCertificate_Delete.json                                                         |
| [connectedEnvironmentsCertificatesGetSample.js][connectedenvironmentscertificatesgetsample]                           | Get the specified Certificate. x-ms-original-file: specification/app/resource-manager/Microsoft.App/stable/2025-01-01/examples/ConnectedEnvironmentsCertificate_Get.json                                                                |
| [connectedEnvironmentsCertificatesListSample.js][connectedenvironmentscertificateslistsample]                         | Get the Certificates in a given connected environment. x-ms-original-file: specification/app/resource-manager/Microsoft.App/stable/2025-01-01/examples/ConnectedEnvironmentsCertificates_ListByConnectedEnvironment.json                |
| [connectedEnvironmentsCertificatesUpdateSample.js][connectedenvironmentscertificatesupdatesample]                     | Patches a certificate. Currently only patching of tags is supported x-ms-original-file: specification/app/resource-manager/Microsoft.App/stable/2025-01-01/examples/ConnectedEnvironmentsCertificates_Patch.json                        |
| [connectedEnvironmentsCheckNameAvailabilitySample.js][connectedenvironmentschecknameavailabilitysample]               | Checks if resource connectedEnvironmentName is available. x-ms-original-file: specification/app/resource-manager/Microsoft.App/stable/2025-01-01/examples/ConnectedEnvironmentsCertificates_CheckNameAvailability.json                  |
| [connectedEnvironmentsCreateOrUpdateSample.js][connectedenvironmentscreateorupdatesample]                             | Creates or updates an connectedEnvironment. x-ms-original-file: specification/app/resource-manager/Microsoft.App/stable/2025-01-01/examples/ConnectedEnvironments_CreateOrUpdate.json                                                   |
| [connectedEnvironmentsDaprComponentsCreateOrUpdateSample.js][connectedenvironmentsdaprcomponentscreateorupdatesample] | Creates or updates a Dapr Component in a connected environment. x-ms-original-file: specification/app/resource-manager/Microsoft.App/stable/2025-01-01/examples/ConnectedEnvironmentsDaprComponents_CreateOrUpdate.json                 |
| [connectedEnvironmentsDaprComponentsDeleteSample.js][connectedenvironmentsdaprcomponentsdeletesample]                 | Delete a Dapr Component from a connected environment. x-ms-original-file: specification/app/resource-manager/Microsoft.App/stable/2025-01-01/examples/ConnectedEnvironmentsDaprComponents_Delete.json                                   |
| [connectedEnvironmentsDaprComponentsGetSample.js][connectedenvironmentsdaprcomponentsgetsample]                       | Get a dapr component. x-ms-original-file: specification/app/resource-manager/Microsoft.App/stable/2025-01-01/examples/ConnectedEnvironmentsDaprComponents_Get.json                                                                      |
| [connectedEnvironmentsDaprComponentsListSample.js][connectedenvironmentsdaprcomponentslistsample]                     | Get the Dapr Components for a connected environment. x-ms-original-file: specification/app/resource-manager/Microsoft.App/stable/2025-01-01/examples/ConnectedEnvironmentsDaprComponents_List.json                                      |
| [connectedEnvironmentsDaprComponentsListSecretsSample.js][connectedenvironmentsdaprcomponentslistsecretssample]       | List secrets for a dapr component x-ms-original-file: specification/app/resource-manager/Microsoft.App/stable/2025-01-01/examples/ConnectedEnvironmentsDaprComponents_ListSecrets.json                                                  |
| [connectedEnvironmentsDeleteSample.js][connectedenvironmentsdeletesample]                                             | Delete an connectedEnvironment. x-ms-original-file: specification/app/resource-manager/Microsoft.App/stable/2025-01-01/examples/ConnectedEnvironments_Delete.json                                                                       |
| [connectedEnvironmentsGetSample.js][connectedenvironmentsgetsample]                                                   | Get the properties of an connectedEnvironment. x-ms-original-file: specification/app/resource-manager/Microsoft.App/stable/2025-01-01/examples/ConnectedEnvironments_Get.json                                                           |
| [connectedEnvironmentsListByResourceGroupSample.js][connectedenvironmentslistbyresourcegroupsample]                   | Get all connectedEnvironments in a resource group. x-ms-original-file: specification/app/resource-manager/Microsoft.App/stable/2025-01-01/examples/ConnectedEnvironments_ListByResourceGroup.json                                       |
| [connectedEnvironmentsListBySubscriptionSample.js][connectedenvironmentslistbysubscriptionsample]                     | Get all connectedEnvironments for a subscription. x-ms-original-file: specification/app/resource-manager/Microsoft.App/stable/2025-01-01/examples/ConnectedEnvironments_ListBySubscription.json                                         |
| [connectedEnvironmentsStoragesCreateOrUpdateSample.js][connectedenvironmentsstoragescreateorupdatesample]             | Create or update storage for a connectedEnvironment. x-ms-original-file: specification/app/resource-manager/Microsoft.App/stable/2025-01-01/examples/ConnectedEnvironmentsStorages_CreateOrUpdate.json                                  |
| [connectedEnvironmentsStoragesDeleteSample.js][connectedenvironmentsstoragesdeletesample]                             | Delete storage for a connectedEnvironment. x-ms-original-file: specification/app/resource-manager/Microsoft.App/stable/2025-01-01/examples/ConnectedEnvironmentsStorages_Delete.json                                                    |
| [connectedEnvironmentsStoragesGetSample.js][connectedenvironmentsstoragesgetsample]                                   | Get storage for a connectedEnvironment. x-ms-original-file: specification/app/resource-manager/Microsoft.App/stable/2025-01-01/examples/ConnectedEnvironmentsStorages_Get.json                                                          |
| [connectedEnvironmentsStoragesListSample.js][connectedenvironmentsstorageslistsample]                                 | Get all storages for a connectedEnvironment. x-ms-original-file: specification/app/resource-manager/Microsoft.App/stable/2025-01-01/examples/ConnectedEnvironmentsStorages_List.json                                                    |
| [connectedEnvironmentsUpdateSample.js][connectedenvironmentsupdatesample]                                             | Patches a Managed Environment. Only patching of tags is supported currently x-ms-original-file: specification/app/resource-manager/Microsoft.App/stable/2025-01-01/examples/ConnectedEnvironments_Patch.json                            |
| [containerAppsAuthConfigsCreateOrUpdateSample.js][containerappsauthconfigscreateorupdatesample]                       | Create or update the AuthConfig for a Container App. x-ms-original-file: specification/app/resource-manager/Microsoft.App/stable/2025-01-01/examples/AuthConfigs_CreateOrUpdate.json                                                    |
| [containerAppsAuthConfigsDeleteSample.js][containerappsauthconfigsdeletesample]                                       | Delete a Container App AuthConfig. x-ms-original-file: specification/app/resource-manager/Microsoft.App/stable/2025-01-01/examples/AuthConfigs_Delete.json                                                                              |
| [containerAppsAuthConfigsGetSample.js][containerappsauthconfigsgetsample]                                             | Get a AuthConfig of a Container App. x-ms-original-file: specification/app/resource-manager/Microsoft.App/stable/2025-01-01/examples/AuthConfigs_Get.json                                                                               |
| [containerAppsAuthConfigsListByContainerAppSample.js][containerappsauthconfigslistbycontainerappsample]               | Get the Container App AuthConfigs in a given resource group. x-ms-original-file: specification/app/resource-manager/Microsoft.App/stable/2025-01-01/examples/AuthConfigs_ListByContainer.json                                           |
| [containerAppsCreateOrUpdateSample.js][containerappscreateorupdatesample]                                             | Create or update a Container App. x-ms-original-file: specification/app/resource-manager/Microsoft.App/stable/2025-01-01/examples/ContainerApps_CreateOrUpdate.json                                                                     |
| [containerAppsDeleteSample.js][containerappsdeletesample]                                                             | Delete a Container App. x-ms-original-file: specification/app/resource-manager/Microsoft.App/stable/2025-01-01/examples/ContainerApps_Delete.json                                                                                       |
| [containerAppsDiagnosticsGetDetectorSample.js][containerappsdiagnosticsgetdetectorsample]                             | Get a diagnostics result of a Container App. x-ms-original-file: specification/app/resource-manager/Microsoft.App/stable/2025-01-01/examples/ContainerAppsDiagnostics_Get.json                                                          |
| [containerAppsDiagnosticsGetRevisionSample.js][containerappsdiagnosticsgetrevisionsample]                             | Get a revision of a Container App. x-ms-original-file: specification/app/resource-manager/Microsoft.App/stable/2025-01-01/examples/Revisions_Get.json                                                                                   |
| [containerAppsDiagnosticsGetRootSample.js][containerappsdiagnosticsgetrootsample]                                     | Get the properties of a Container App. x-ms-original-file: specification/app/resource-manager/Microsoft.App/stable/2025-01-01/examples/ContainerApps_Get.json                                                                           |
| [containerAppsDiagnosticsListDetectorsSample.js][containerappsdiagnosticslistdetectorssample]                         | Get the list of diagnostics for a given Container App. x-ms-original-file: specification/app/resource-manager/Microsoft.App/stable/2025-01-01/examples/ContainerAppsDiagnostics_List.json                                               |
| [containerAppsDiagnosticsListRevisionsSample.js][containerappsdiagnosticslistrevisionssample]                         | Get the Revisions for a given Container App. x-ms-original-file: specification/app/resource-manager/Microsoft.App/stable/2025-01-01/examples/Revisions_List.json                                                                        |
| [containerAppsGetAuthTokenSample.js][containerappsgetauthtokensample]                                                 | Get auth token for a container app x-ms-original-file: specification/app/resource-manager/Microsoft.App/stable/2025-01-01/examples/ContainerApps_GetAuthToken.json                                                                      |
| [containerAppsGetSample.js][containerappsgetsample]                                                                   | Get the properties of a Container App. x-ms-original-file: specification/app/resource-manager/Microsoft.App/stable/2025-01-01/examples/ContainerApps_Get.json                                                                           |
| [containerAppsListByResourceGroupSample.js][containerappslistbyresourcegroupsample]                                   | Get the Container Apps in a given resource group. x-ms-original-file: specification/app/resource-manager/Microsoft.App/stable/2025-01-01/examples/ContainerApps_ListByResourceGroup.json                                                |
| [containerAppsListBySubscriptionSample.js][containerappslistbysubscriptionsample]                                     | Get the Container Apps in a given subscription. x-ms-original-file: specification/app/resource-manager/Microsoft.App/stable/2025-01-01/examples/ContainerApps_ListBySubscription.json                                                   |
| [containerAppsListCustomHostNameAnalysisSample.js][containerappslistcustomhostnameanalysissample]                     | Analyzes a custom hostname for a Container App x-ms-original-file: specification/app/resource-manager/Microsoft.App/stable/2025-01-01/examples/ContainerApps_ListCustomHostNameAnalysis.json                                            |
| [containerAppsListSecretsSample.js][containerappslistsecretssample]                                                   | List secrets for a container app x-ms-original-file: specification/app/resource-manager/Microsoft.App/stable/2025-01-01/examples/ContainerApps_ListSecrets.json                                                                         |
| [containerAppsRevisionReplicasGetReplicaSample.js][containerappsrevisionreplicasgetreplicasample]                     | Get a replica for a Container App Revision. x-ms-original-file: specification/app/resource-manager/Microsoft.App/stable/2025-01-01/examples/Replicas_Get.json                                                                           |
| [containerAppsRevisionReplicasListReplicasSample.js][containerappsrevisionreplicaslistreplicassample]                 | List replicas for a Container App Revision. x-ms-original-file: specification/app/resource-manager/Microsoft.App/stable/2025-01-01/examples/Replicas_List.json                                                                          |
| [containerAppsRevisionsActivateRevisionSample.js][containerappsrevisionsactivaterevisionsample]                       | Activates a revision for a Container App x-ms-original-file: specification/app/resource-manager/Microsoft.App/stable/2025-01-01/examples/Revisions_Activate.json                                                                        |
| [containerAppsRevisionsDeactivateRevisionSample.js][containerappsrevisionsdeactivaterevisionsample]                   | Deactivates a revision for a Container App x-ms-original-file: specification/app/resource-manager/Microsoft.App/stable/2025-01-01/examples/Revisions_Deactivate.json                                                                    |
| [containerAppsRevisionsGetRevisionSample.js][containerappsrevisionsgetrevisionsample]                                 | Get a revision of a Container App. x-ms-original-file: specification/app/resource-manager/Microsoft.App/stable/2025-01-01/examples/Revisions_Get.json                                                                                   |
| [containerAppsRevisionsListRevisionsSample.js][containerappsrevisionslistrevisionssample]                             | Get the Revisions for a given Container App. x-ms-original-file: specification/app/resource-manager/Microsoft.App/stable/2025-01-01/examples/Revisions_List.json                                                                        |
| [containerAppsRevisionsRestartRevisionSample.js][containerappsrevisionsrestartrevisionsample]                         | Restarts a revision for a Container App x-ms-original-file: specification/app/resource-manager/Microsoft.App/stable/2025-01-01/examples/Revisions_Restart.json                                                                          |
| [containerAppsSessionPoolsCreateOrUpdateSample.js][containerappssessionpoolscreateorupdatesample]                     | Create or update a session pool with the given properties. x-ms-original-file: specification/app/resource-manager/Microsoft.App/stable/2025-01-01/examples/SessionPools_LifecycleOnContainerExit_CreateOrUpdate.json                    |
| [containerAppsSessionPoolsDeleteSample.js][containerappssessionpoolsdeletesample]                                     | Delete the session pool with the given name. x-ms-original-file: specification/app/resource-manager/Microsoft.App/stable/2025-01-01/examples/SessionPools_Delete.json                                                                   |
| [containerAppsSessionPoolsGetSample.js][containerappssessionpoolsgetsample]                                           | Get the properties of a session pool. x-ms-original-file: specification/app/resource-manager/Microsoft.App/stable/2025-01-01/examples/SessionPools_Get.json                                                                             |
| [containerAppsSessionPoolsListByResourceGroupSample.js][containerappssessionpoolslistbyresourcegroupsample]           | Get the session pools in a given resource group of a subscription. x-ms-original-file: specification/app/resource-manager/Microsoft.App/stable/2025-01-01/examples/SessionPools_ListByResourceGroup.json                                |
| [containerAppsSessionPoolsListBySubscriptionSample.js][containerappssessionpoolslistbysubscriptionsample]             | Get the session pools in a given subscription. x-ms-original-file: specification/app/resource-manager/Microsoft.App/stable/2025-01-01/examples/SessionPools_ListBySubscription.json                                                     |
| [containerAppsSessionPoolsUpdateSample.js][containerappssessionpoolsupdatesample]                                     | Patches a session pool using JSON merge patch x-ms-original-file: specification/app/resource-manager/Microsoft.App/stable/2025-01-01/examples/SessionPools_Patch.json                                                                   |
| [containerAppsSourceControlsCreateOrUpdateSample.js][containerappssourcecontrolscreateorupdatesample]                 | Create or update the SourceControl for a Container App. x-ms-original-file: specification/app/resource-manager/Microsoft.App/stable/2025-01-01/examples/SourceControls_CreateOrUpdate.json                                              |
| [containerAppsSourceControlsDeleteSample.js][containerappssourcecontrolsdeletesample]                                 | Delete a Container App SourceControl. x-ms-original-file: specification/app/resource-manager/Microsoft.App/stable/2025-01-01/examples/SourceControls_Delete.json                                                                        |
| [containerAppsSourceControlsGetSample.js][containerappssourcecontrolsgetsample]                                       | Get a SourceControl of a Container App. x-ms-original-file: specification/app/resource-manager/Microsoft.App/stable/2025-01-01/examples/SourceControls_Get.json                                                                         |
| [containerAppsSourceControlsListByContainerAppSample.js][containerappssourcecontrolslistbycontainerappsample]         | Get the Container App SourceControls in a given resource group. x-ms-original-file: specification/app/resource-manager/Microsoft.App/stable/2025-01-01/examples/SourceControls_ListByContainer.json                                     |
| [containerAppsStartSample.js][containerappsstartsample]                                                               | Start a container app x-ms-original-file: specification/app/resource-manager/Microsoft.App/stable/2025-01-01/examples/ContainerApps_Start.json                                                                                          |
| [containerAppsStopSample.js][containerappsstopsample]                                                                 | Stop a container app x-ms-original-file: specification/app/resource-manager/Microsoft.App/stable/2025-01-01/examples/ContainerApps_Stop.json                                                                                            |
| [containerAppsUpdateSample.js][containerappsupdatesample]                                                             | Patches a Container App using JSON Merge Patch x-ms-original-file: specification/app/resource-manager/Microsoft.App/stable/2025-01-01/examples/ContainerApps_Patch.json                                                                 |
| [daprComponentsCreateOrUpdateSample.js][daprcomponentscreateorupdatesample]                                           | Creates or updates a Dapr Component in a Managed Environment. x-ms-original-file: specification/app/resource-manager/Microsoft.App/stable/2025-01-01/examples/DaprComponents_CreateOrUpdate_SecretStoreComponent.json                   |
| [daprComponentsDeleteSample.js][daprcomponentsdeletesample]                                                           | Delete a Dapr Component from a Managed Environment. x-ms-original-file: specification/app/resource-manager/Microsoft.App/stable/2025-01-01/examples/DaprComponents_Delete.json                                                          |
| [daprComponentsGetSample.js][daprcomponentsgetsample]                                                                 | Get a dapr component. x-ms-original-file: specification/app/resource-manager/Microsoft.App/stable/2025-01-01/examples/DaprComponents_Get_SecretStoreComponent.json                                                                      |
| [daprComponentsListSample.js][daprcomponentslistsample]                                                               | Get the Dapr Components for a managed environment. x-ms-original-file: specification/app/resource-manager/Microsoft.App/stable/2025-01-01/examples/DaprComponents_List.json                                                             |
| [daprComponentsListSecretsSample.js][daprcomponentslistsecretssample]                                                 | List secrets for a dapr component x-ms-original-file: specification/app/resource-manager/Microsoft.App/stable/2025-01-01/examples/DaprComponents_ListSecrets.json                                                                       |
| [getCustomDomainVerificationIdSample.js][getcustomdomainverificationidsample]                                         | Get the verification id of a subscription used for verifying custom domains x-ms-original-file: specification/app/resource-manager/Microsoft.App/stable/2025-01-01/examples/Subscriptions_GetCustomDomainVerificationId.json            |
| [javaComponentsCreateOrUpdateSample.js][javacomponentscreateorupdatesample]                                           | Creates or updates a Java Component in a Managed Environment. x-ms-original-file: specification/app/resource-manager/Microsoft.App/stable/2025-01-01/examples/JavaComponents_CreateOrUpdate.json                                        |
| [javaComponentsDeleteSample.js][javacomponentsdeletesample]                                                           | Delete a Java Component. x-ms-original-file: specification/app/resource-manager/Microsoft.App/stable/2025-01-01/examples/JavaComponents_Delete.json                                                                                     |
| [javaComponentsGetSample.js][javacomponentsgetsample]                                                                 | Get a Java Component. x-ms-original-file: specification/app/resource-manager/Microsoft.App/stable/2025-01-01/examples/JavaComponents_Get.json                                                                                           |
| [javaComponentsListSample.js][javacomponentslistsample]                                                               | Get the Java Components for a managed environment. x-ms-original-file: specification/app/resource-manager/Microsoft.App/stable/2025-01-01/examples/JavaComponents_List.json                                                             |
| [javaComponentsUpdateSample.js][javacomponentsupdatesample]                                                           | Patches a Java Component using JSON Merge Patch x-ms-original-file: specification/app/resource-manager/Microsoft.App/stable/2025-01-01/examples/JavaComponents_Patch.json                                                               |
| [jobExecutionSample.js][jobexecutionsample]                                                                           | Get details of a single job execution x-ms-original-file: specification/app/resource-manager/Microsoft.App/stable/2025-01-01/examples/Job_Execution_Get.json                                                                            |
| [jobsCreateOrUpdateSample.js][jobscreateorupdatesample]                                                               | Create or Update a Container Apps Job. x-ms-original-file: specification/app/resource-manager/Microsoft.App/stable/2025-01-01/examples/Job_CreateorUpdate.json                                                                          |
| [jobsDeleteSample.js][jobsdeletesample]                                                                               | Delete a Container Apps Job. x-ms-original-file: specification/app/resource-manager/Microsoft.App/stable/2025-01-01/examples/Job_Delete.json                                                                                            |
| [jobsExecutionsListSample.js][jobsexecutionslistsample]                                                               | Get a Container Apps Job's executions x-ms-original-file: specification/app/resource-manager/Microsoft.App/stable/2025-01-01/examples/Job_Executions_Get.json                                                                           |
| [jobsGetDetectorSample.js][jobsgetdetectorsample]                                                                     | Get the diagnostics data for a Container App Job. x-ms-original-file: specification/app/resource-manager/Microsoft.App/stable/2025-01-01/examples/Job_GetDetector.json                                                                  |
| [jobsGetSample.js][jobsgetsample]                                                                                     | Get the properties of a Container Apps Job. x-ms-original-file: specification/app/resource-manager/Microsoft.App/stable/2025-01-01/examples/Job_Get.json                                                                                |
| [jobsListByResourceGroupSample.js][jobslistbyresourcegroupsample]                                                     | Get the Container Apps Jobs in a given resource group. x-ms-original-file: specification/app/resource-manager/Microsoft.App/stable/2025-01-01/examples/Jobs_ListByResourceGroup.json                                                    |
| [jobsListBySubscriptionSample.js][jobslistbysubscriptionsample]                                                       | Get the Container Apps Jobs in a given subscription. x-ms-original-file: specification/app/resource-manager/Microsoft.App/stable/2025-01-01/examples/Jobs_ListBySubscription.json                                                       |
| [jobsListDetectorsSample.js][jobslistdetectorssample]                                                                 | Get the list of diagnostics for a Container App Job. x-ms-original-file: specification/app/resource-manager/Microsoft.App/stable/2025-01-01/examples/Job_ListDetectors.json                                                             |
| [jobsListSecretsSample.js][jobslistsecretssample]                                                                     | List secrets for a container apps job x-ms-original-file: specification/app/resource-manager/Microsoft.App/stable/2025-01-01/examples/Job_ListSecrets.json                                                                              |
| [jobsProxyGetSample.js][jobsproxygetsample]                                                                           | Get the properties of a Container App Job. x-ms-original-file: specification/app/resource-manager/Microsoft.App/stable/2025-01-01/examples/Job_ProxyGet.json                                                                            |
| [jobsStartSample.js][jobsstartsample]                                                                                 | Start a Container Apps Job x-ms-original-file: specification/app/resource-manager/Microsoft.App/stable/2025-01-01/examples/Job_Start.json                                                                                               |
| [jobsStopExecutionSample.js][jobsstopexecutionsample]                                                                 | Terminates execution of a running container apps job x-ms-original-file: specification/app/resource-manager/Microsoft.App/stable/2025-01-01/examples/Job_Stop_Execution.json                                                            |
| [jobsStopMultipleExecutionsSample.js][jobsstopmultipleexecutionssample]                                               | Terminates execution of a running container apps job x-ms-original-file: specification/app/resource-manager/Microsoft.App/stable/2025-01-01/examples/Job_Stop_Multiple.json                                                             |
| [jobsUpdateSample.js][jobsupdatesample]                                                                               | Patches a Container Apps Job using JSON Merge Patch x-ms-original-file: specification/app/resource-manager/Microsoft.App/stable/2025-01-01/examples/Job_Patch.json                                                                      |
| [managedCertificatesCreateOrUpdateSample.js][managedcertificatescreateorupdatesample]                                 | Create or Update a Managed Certificate. x-ms-original-file: specification/app/resource-manager/Microsoft.App/stable/2025-01-01/examples/ManagedCertificate_CreateOrUpdate.json                                                          |
| [managedCertificatesDeleteSample.js][managedcertificatesdeletesample]                                                 | Deletes the specified Managed Certificate. x-ms-original-file: specification/app/resource-manager/Microsoft.App/stable/2025-01-01/examples/ManagedCertificate_Delete.json                                                               |
| [managedCertificatesGetSample.js][managedcertificatesgetsample]                                                       | Get the specified Managed Certificate. x-ms-original-file: specification/app/resource-manager/Microsoft.App/stable/2025-01-01/examples/ManagedCertificate_Get.json                                                                      |
| [managedCertificatesListSample.js][managedcertificateslistsample]                                                     | Get the Managed Certificates in a given managed environment. x-ms-original-file: specification/app/resource-manager/Microsoft.App/stable/2025-01-01/examples/ManagedCertificates_ListByManagedEnvironment.json                          |
| [managedCertificatesUpdateSample.js][managedcertificatesupdatesample]                                                 | Patches a managed certificate. Oly patching of tags is supported x-ms-original-file: specification/app/resource-manager/Microsoft.App/stable/2025-01-01/examples/ManagedCertificates_Patch.json                                         |
| [managedEnvironmentDiagnosticsGetDetectorSample.js][managedenvironmentdiagnosticsgetdetectorsample]                   | Get the diagnostics data for a Managed Environment used to host container apps. x-ms-original-file: specification/app/resource-manager/Microsoft.App/stable/2025-01-01/examples/ManagedEnvironmentDiagnostics_Get.json                  |
| [managedEnvironmentDiagnosticsListDetectorsSample.js][managedenvironmentdiagnosticslistdetectorssample]               | Get the list of diagnostics for a Managed Environment used to host container apps. x-ms-original-file: specification/app/resource-manager/Microsoft.App/stable/2025-01-01/examples/ManagedEnvironmentDiagnostics_List.json              |
| [managedEnvironmentUsagesListSample.js][managedenvironmentusageslistsample]                                           | Gets the current usage information as well as the limits for environment. x-ms-original-file: specification/app/resource-manager/Microsoft.App/stable/2025-01-01/examples/ManagedEnvironmentUsages_List.json                            |
| [managedEnvironmentsCreateOrUpdateSample.js][managedenvironmentscreateorupdatesample]                                 | Creates or updates a Managed Environment used to host container apps. x-ms-original-file: specification/app/resource-manager/Microsoft.App/stable/2025-01-01/examples/ManagedEnvironments_CustomInfrastructureResourceGroup_Create.json |
| [managedEnvironmentsDeleteSample.js][managedenvironmentsdeletesample]                                                 | Delete a Managed Environment if it does not have any container apps. x-ms-original-file: specification/app/resource-manager/Microsoft.App/stable/2025-01-01/examples/ManagedEnvironments_Delete.json                                    |
| [managedEnvironmentsDiagnosticsGetRootSample.js][managedenvironmentsdiagnosticsgetrootsample]                         | Get the properties of a Managed Environment used to host container apps. x-ms-original-file: specification/app/resource-manager/Microsoft.App/stable/2025-01-01/examples/ManagedEnvironments_Get.json                                   |
| [managedEnvironmentsGetAuthTokenSample.js][managedenvironmentsgetauthtokensample]                                     | Checks if resource name is available. x-ms-original-file: specification/app/resource-manager/Microsoft.App/stable/2025-01-01/examples/ManagedEnvironments_GetAuthToken.json                                                             |
| [managedEnvironmentsGetSample.js][managedenvironmentsgetsample]                                                       | Get the properties of a Managed Environment used to host container apps. x-ms-original-file: specification/app/resource-manager/Microsoft.App/stable/2025-01-01/examples/ManagedEnvironments_Get.json                                   |
| [managedEnvironmentsListByResourceGroupSample.js][managedenvironmentslistbyresourcegroupsample]                       | Get all the Managed Environments in a resource group. x-ms-original-file: specification/app/resource-manager/Microsoft.App/stable/2025-01-01/examples/ManagedEnvironments_ListByResourceGroup.json                                      |
| [managedEnvironmentsListBySubscriptionSample.js][managedenvironmentslistbysubscriptionsample]                         | Get all Managed Environments for a subscription. x-ms-original-file: specification/app/resource-manager/Microsoft.App/stable/2025-01-01/examples/ManagedEnvironments_ListBySubscription.json                                            |
| [managedEnvironmentsListWorkloadProfileStatesSample.js][managedenvironmentslistworkloadprofilestatessample]           | Get all workload Profile States for a Managed Environment. x-ms-original-file: specification/app/resource-manager/Microsoft.App/stable/2025-01-01/examples/ManagedEnvironments_ListWorkloadProfileStates.json                           |
| [managedEnvironmentsStoragesCreateOrUpdateSample.js][managedenvironmentsstoragescreateorupdatesample]                 | Create or update storage for a managedEnvironment. x-ms-original-file: specification/app/resource-manager/Microsoft.App/stable/2025-01-01/examples/ManagedEnvironmentsStorages_CreateOrUpdate.json                                      |
| [managedEnvironmentsStoragesDeleteSample.js][managedenvironmentsstoragesdeletesample]                                 | Delete storage for a managedEnvironment. x-ms-original-file: specification/app/resource-manager/Microsoft.App/stable/2025-01-01/examples/ManagedEnvironmentsStorages_Delete.json                                                        |
| [managedEnvironmentsStoragesGetSample.js][managedenvironmentsstoragesgetsample]                                       | Get storage for a managedEnvironment. x-ms-original-file: specification/app/resource-manager/Microsoft.App/stable/2025-01-01/examples/ManagedEnvironmentsStorages_Get.json                                                              |
| [managedEnvironmentsStoragesListSample.js][managedenvironmentsstorageslistsample]                                     | Get all storages for a managedEnvironment. x-ms-original-file: specification/app/resource-manager/Microsoft.App/stable/2025-01-01/examples/ManagedEnvironmentsStorages_List.json                                                        |
| [managedEnvironmentsUpdateSample.js][managedenvironmentsupdatesample]                                                 | Patches a Managed Environment using JSON Merge Patch x-ms-original-file: specification/app/resource-manager/Microsoft.App/stable/2025-01-01/examples/ManagedEnvironments_Patch.json                                                     |
| [namespacesCheckNameAvailabilitySample.js][namespaceschecknameavailabilitysample]                                     | Checks if resource name is available. x-ms-original-file: specification/app/resource-manager/Microsoft.App/stable/2025-01-01/examples/Certificates_CheckNameAvailability.json                                                           |
| [operationsListSample.js][operationslistsample]                                                                       | Lists all of the available RP operations. x-ms-original-file: specification/app/resource-manager/Microsoft.App/stable/2025-01-01/examples/Operations_List.json                                                                          |
| [usagesListSample.js][usageslistsample]                                                                               | Gets, for the specified location, the current resource usage information as well as the limits under the subscription. x-ms-original-file: specification/app/resource-manager/Microsoft.App/stable/2025-01-01/examples/Usages_List.json |

## Prerequisites

The sample programs are compatible with [LTS versions of Node.js](https://github.com/nodejs/release#release-schedule).

You need [an Azure subscription][freesub] to run these sample programs.

Samples retrieve credentials to access the service endpoint from environment variables. Alternatively, edit the source code to include the appropriate credentials. See each individual sample for details on which environment variables/credentials it requires to function.

Adapting the samples to run in the browser may require some additional consideration. For details, please see the [package README][package].

## Setup

To run the samples using the published version of the package:

1. Install the dependencies using `npm`:

```bash
npm install
```

2. Edit the file `sample.env`, adding the correct credentials to access the Azure service and run the samples. Then rename the file from `sample.env` to just `.env`. The sample programs will read this file automatically.

3. Run whichever samples you like (note that some samples may require additional setup, see the table above):

```bash
node availableWorkloadProfilesGetSample.js
```

Alternatively, run a single sample with the correct environment variables set (setting up the `.env` file is not required if you do this), for example (cross-platform):

```bash
npx dev-tool run vendored cross-env APPCONTAINERS_SUBSCRIPTION_ID="<appcontainers subscription id>" node availableWorkloadProfilesGetSample.js
```

## Next Steps

Take a look at our [API Documentation][apiref] for more information about the APIs that are available in the clients.

[availableworkloadprofilesgetsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/appcontainers/arm-appcontainers/samples/v2/javascript/availableWorkloadProfilesGetSample.js
[billingmetersgetsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/appcontainers/arm-appcontainers/samples/v2/javascript/billingMetersGetSample.js
[certificatescreateorupdatesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/appcontainers/arm-appcontainers/samples/v2/javascript/certificatesCreateOrUpdateSample.js
[certificatesdeletesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/appcontainers/arm-appcontainers/samples/v2/javascript/certificatesDeleteSample.js
[certificatesgetsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/appcontainers/arm-appcontainers/samples/v2/javascript/certificatesGetSample.js
[certificateslistsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/appcontainers/arm-appcontainers/samples/v2/javascript/certificatesListSample.js
[certificatesupdatesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/appcontainers/arm-appcontainers/samples/v2/javascript/certificatesUpdateSample.js
[connectedenvironmentscertificatescreateorupdatesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/appcontainers/arm-appcontainers/samples/v2/javascript/connectedEnvironmentsCertificatesCreateOrUpdateSample.js
[connectedenvironmentscertificatesdeletesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/appcontainers/arm-appcontainers/samples/v2/javascript/connectedEnvironmentsCertificatesDeleteSample.js
[connectedenvironmentscertificatesgetsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/appcontainers/arm-appcontainers/samples/v2/javascript/connectedEnvironmentsCertificatesGetSample.js
[connectedenvironmentscertificateslistsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/appcontainers/arm-appcontainers/samples/v2/javascript/connectedEnvironmentsCertificatesListSample.js
[connectedenvironmentscertificatesupdatesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/appcontainers/arm-appcontainers/samples/v2/javascript/connectedEnvironmentsCertificatesUpdateSample.js
[connectedenvironmentschecknameavailabilitysample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/appcontainers/arm-appcontainers/samples/v2/javascript/connectedEnvironmentsCheckNameAvailabilitySample.js
[connectedenvironmentscreateorupdatesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/appcontainers/arm-appcontainers/samples/v2/javascript/connectedEnvironmentsCreateOrUpdateSample.js
[connectedenvironmentsdaprcomponentscreateorupdatesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/appcontainers/arm-appcontainers/samples/v2/javascript/connectedEnvironmentsDaprComponentsCreateOrUpdateSample.js
[connectedenvironmentsdaprcomponentsdeletesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/appcontainers/arm-appcontainers/samples/v2/javascript/connectedEnvironmentsDaprComponentsDeleteSample.js
[connectedenvironmentsdaprcomponentsgetsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/appcontainers/arm-appcontainers/samples/v2/javascript/connectedEnvironmentsDaprComponentsGetSample.js
[connectedenvironmentsdaprcomponentslistsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/appcontainers/arm-appcontainers/samples/v2/javascript/connectedEnvironmentsDaprComponentsListSample.js
[connectedenvironmentsdaprcomponentslistsecretssample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/appcontainers/arm-appcontainers/samples/v2/javascript/connectedEnvironmentsDaprComponentsListSecretsSample.js
[connectedenvironmentsdeletesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/appcontainers/arm-appcontainers/samples/v2/javascript/connectedEnvironmentsDeleteSample.js
[connectedenvironmentsgetsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/appcontainers/arm-appcontainers/samples/v2/javascript/connectedEnvironmentsGetSample.js
[connectedenvironmentslistbyresourcegroupsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/appcontainers/arm-appcontainers/samples/v2/javascript/connectedEnvironmentsListByResourceGroupSample.js
[connectedenvironmentslistbysubscriptionsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/appcontainers/arm-appcontainers/samples/v2/javascript/connectedEnvironmentsListBySubscriptionSample.js
[connectedenvironmentsstoragescreateorupdatesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/appcontainers/arm-appcontainers/samples/v2/javascript/connectedEnvironmentsStoragesCreateOrUpdateSample.js
[connectedenvironmentsstoragesdeletesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/appcontainers/arm-appcontainers/samples/v2/javascript/connectedEnvironmentsStoragesDeleteSample.js
[connectedenvironmentsstoragesgetsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/appcontainers/arm-appcontainers/samples/v2/javascript/connectedEnvironmentsStoragesGetSample.js
[connectedenvironmentsstorageslistsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/appcontainers/arm-appcontainers/samples/v2/javascript/connectedEnvironmentsStoragesListSample.js
[connectedenvironmentsupdatesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/appcontainers/arm-appcontainers/samples/v2/javascript/connectedEnvironmentsUpdateSample.js
[containerappsauthconfigscreateorupdatesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/appcontainers/arm-appcontainers/samples/v2/javascript/containerAppsAuthConfigsCreateOrUpdateSample.js
[containerappsauthconfigsdeletesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/appcontainers/arm-appcontainers/samples/v2/javascript/containerAppsAuthConfigsDeleteSample.js
[containerappsauthconfigsgetsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/appcontainers/arm-appcontainers/samples/v2/javascript/containerAppsAuthConfigsGetSample.js
[containerappsauthconfigslistbycontainerappsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/appcontainers/arm-appcontainers/samples/v2/javascript/containerAppsAuthConfigsListByContainerAppSample.js
[containerappscreateorupdatesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/appcontainers/arm-appcontainers/samples/v2/javascript/containerAppsCreateOrUpdateSample.js
[containerappsdeletesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/appcontainers/arm-appcontainers/samples/v2/javascript/containerAppsDeleteSample.js
[containerappsdiagnosticsgetdetectorsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/appcontainers/arm-appcontainers/samples/v2/javascript/containerAppsDiagnosticsGetDetectorSample.js
[containerappsdiagnosticsgetrevisionsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/appcontainers/arm-appcontainers/samples/v2/javascript/containerAppsDiagnosticsGetRevisionSample.js
[containerappsdiagnosticsgetrootsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/appcontainers/arm-appcontainers/samples/v2/javascript/containerAppsDiagnosticsGetRootSample.js
[containerappsdiagnosticslistdetectorssample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/appcontainers/arm-appcontainers/samples/v2/javascript/containerAppsDiagnosticsListDetectorsSample.js
[containerappsdiagnosticslistrevisionssample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/appcontainers/arm-appcontainers/samples/v2/javascript/containerAppsDiagnosticsListRevisionsSample.js
[containerappsgetauthtokensample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/appcontainers/arm-appcontainers/samples/v2/javascript/containerAppsGetAuthTokenSample.js
[containerappsgetsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/appcontainers/arm-appcontainers/samples/v2/javascript/containerAppsGetSample.js
[containerappslistbyresourcegroupsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/appcontainers/arm-appcontainers/samples/v2/javascript/containerAppsListByResourceGroupSample.js
[containerappslistbysubscriptionsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/appcontainers/arm-appcontainers/samples/v2/javascript/containerAppsListBySubscriptionSample.js
[containerappslistcustomhostnameanalysissample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/appcontainers/arm-appcontainers/samples/v2/javascript/containerAppsListCustomHostNameAnalysisSample.js
[containerappslistsecretssample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/appcontainers/arm-appcontainers/samples/v2/javascript/containerAppsListSecretsSample.js
[containerappsrevisionreplicasgetreplicasample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/appcontainers/arm-appcontainers/samples/v2/javascript/containerAppsRevisionReplicasGetReplicaSample.js
[containerappsrevisionreplicaslistreplicassample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/appcontainers/arm-appcontainers/samples/v2/javascript/containerAppsRevisionReplicasListReplicasSample.js
[containerappsrevisionsactivaterevisionsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/appcontainers/arm-appcontainers/samples/v2/javascript/containerAppsRevisionsActivateRevisionSample.js
[containerappsrevisionsdeactivaterevisionsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/appcontainers/arm-appcontainers/samples/v2/javascript/containerAppsRevisionsDeactivateRevisionSample.js
[containerappsrevisionsgetrevisionsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/appcontainers/arm-appcontainers/samples/v2/javascript/containerAppsRevisionsGetRevisionSample.js
[containerappsrevisionslistrevisionssample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/appcontainers/arm-appcontainers/samples/v2/javascript/containerAppsRevisionsListRevisionsSample.js
[containerappsrevisionsrestartrevisionsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/appcontainers/arm-appcontainers/samples/v2/javascript/containerAppsRevisionsRestartRevisionSample.js
[containerappssessionpoolscreateorupdatesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/appcontainers/arm-appcontainers/samples/v2/javascript/containerAppsSessionPoolsCreateOrUpdateSample.js
[containerappssessionpoolsdeletesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/appcontainers/arm-appcontainers/samples/v2/javascript/containerAppsSessionPoolsDeleteSample.js
[containerappssessionpoolsgetsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/appcontainers/arm-appcontainers/samples/v2/javascript/containerAppsSessionPoolsGetSample.js
[containerappssessionpoolslistbyresourcegroupsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/appcontainers/arm-appcontainers/samples/v2/javascript/containerAppsSessionPoolsListByResourceGroupSample.js
[containerappssessionpoolslistbysubscriptionsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/appcontainers/arm-appcontainers/samples/v2/javascript/containerAppsSessionPoolsListBySubscriptionSample.js
[containerappssessionpoolsupdatesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/appcontainers/arm-appcontainers/samples/v2/javascript/containerAppsSessionPoolsUpdateSample.js
[containerappssourcecontrolscreateorupdatesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/appcontainers/arm-appcontainers/samples/v2/javascript/containerAppsSourceControlsCreateOrUpdateSample.js
[containerappssourcecontrolsdeletesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/appcontainers/arm-appcontainers/samples/v2/javascript/containerAppsSourceControlsDeleteSample.js
[containerappssourcecontrolsgetsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/appcontainers/arm-appcontainers/samples/v2/javascript/containerAppsSourceControlsGetSample.js
[containerappssourcecontrolslistbycontainerappsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/appcontainers/arm-appcontainers/samples/v2/javascript/containerAppsSourceControlsListByContainerAppSample.js
[containerappsstartsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/appcontainers/arm-appcontainers/samples/v2/javascript/containerAppsStartSample.js
[containerappsstopsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/appcontainers/arm-appcontainers/samples/v2/javascript/containerAppsStopSample.js
[containerappsupdatesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/appcontainers/arm-appcontainers/samples/v2/javascript/containerAppsUpdateSample.js
[daprcomponentscreateorupdatesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/appcontainers/arm-appcontainers/samples/v2/javascript/daprComponentsCreateOrUpdateSample.js
[daprcomponentsdeletesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/appcontainers/arm-appcontainers/samples/v2/javascript/daprComponentsDeleteSample.js
[daprcomponentsgetsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/appcontainers/arm-appcontainers/samples/v2/javascript/daprComponentsGetSample.js
[daprcomponentslistsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/appcontainers/arm-appcontainers/samples/v2/javascript/daprComponentsListSample.js
[daprcomponentslistsecretssample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/appcontainers/arm-appcontainers/samples/v2/javascript/daprComponentsListSecretsSample.js
[getcustomdomainverificationidsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/appcontainers/arm-appcontainers/samples/v2/javascript/getCustomDomainVerificationIdSample.js
[javacomponentscreateorupdatesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/appcontainers/arm-appcontainers/samples/v2/javascript/javaComponentsCreateOrUpdateSample.js
[javacomponentsdeletesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/appcontainers/arm-appcontainers/samples/v2/javascript/javaComponentsDeleteSample.js
[javacomponentsgetsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/appcontainers/arm-appcontainers/samples/v2/javascript/javaComponentsGetSample.js
[javacomponentslistsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/appcontainers/arm-appcontainers/samples/v2/javascript/javaComponentsListSample.js
[javacomponentsupdatesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/appcontainers/arm-appcontainers/samples/v2/javascript/javaComponentsUpdateSample.js
[jobexecutionsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/appcontainers/arm-appcontainers/samples/v2/javascript/jobExecutionSample.js
[jobscreateorupdatesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/appcontainers/arm-appcontainers/samples/v2/javascript/jobsCreateOrUpdateSample.js
[jobsdeletesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/appcontainers/arm-appcontainers/samples/v2/javascript/jobsDeleteSample.js
[jobsexecutionslistsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/appcontainers/arm-appcontainers/samples/v2/javascript/jobsExecutionsListSample.js
[jobsgetdetectorsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/appcontainers/arm-appcontainers/samples/v2/javascript/jobsGetDetectorSample.js
[jobsgetsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/appcontainers/arm-appcontainers/samples/v2/javascript/jobsGetSample.js
[jobslistbyresourcegroupsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/appcontainers/arm-appcontainers/samples/v2/javascript/jobsListByResourceGroupSample.js
[jobslistbysubscriptionsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/appcontainers/arm-appcontainers/samples/v2/javascript/jobsListBySubscriptionSample.js
[jobslistdetectorssample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/appcontainers/arm-appcontainers/samples/v2/javascript/jobsListDetectorsSample.js
[jobslistsecretssample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/appcontainers/arm-appcontainers/samples/v2/javascript/jobsListSecretsSample.js
[jobsproxygetsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/appcontainers/arm-appcontainers/samples/v2/javascript/jobsProxyGetSample.js
[jobsstartsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/appcontainers/arm-appcontainers/samples/v2/javascript/jobsStartSample.js
[jobsstopexecutionsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/appcontainers/arm-appcontainers/samples/v2/javascript/jobsStopExecutionSample.js
[jobsstopmultipleexecutionssample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/appcontainers/arm-appcontainers/samples/v2/javascript/jobsStopMultipleExecutionsSample.js
[jobsupdatesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/appcontainers/arm-appcontainers/samples/v2/javascript/jobsUpdateSample.js
[managedcertificatescreateorupdatesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/appcontainers/arm-appcontainers/samples/v2/javascript/managedCertificatesCreateOrUpdateSample.js
[managedcertificatesdeletesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/appcontainers/arm-appcontainers/samples/v2/javascript/managedCertificatesDeleteSample.js
[managedcertificatesgetsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/appcontainers/arm-appcontainers/samples/v2/javascript/managedCertificatesGetSample.js
[managedcertificateslistsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/appcontainers/arm-appcontainers/samples/v2/javascript/managedCertificatesListSample.js
[managedcertificatesupdatesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/appcontainers/arm-appcontainers/samples/v2/javascript/managedCertificatesUpdateSample.js
[managedenvironmentdiagnosticsgetdetectorsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/appcontainers/arm-appcontainers/samples/v2/javascript/managedEnvironmentDiagnosticsGetDetectorSample.js
[managedenvironmentdiagnosticslistdetectorssample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/appcontainers/arm-appcontainers/samples/v2/javascript/managedEnvironmentDiagnosticsListDetectorsSample.js
[managedenvironmentusageslistsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/appcontainers/arm-appcontainers/samples/v2/javascript/managedEnvironmentUsagesListSample.js
[managedenvironmentscreateorupdatesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/appcontainers/arm-appcontainers/samples/v2/javascript/managedEnvironmentsCreateOrUpdateSample.js
[managedenvironmentsdeletesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/appcontainers/arm-appcontainers/samples/v2/javascript/managedEnvironmentsDeleteSample.js
[managedenvironmentsdiagnosticsgetrootsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/appcontainers/arm-appcontainers/samples/v2/javascript/managedEnvironmentsDiagnosticsGetRootSample.js
[managedenvironmentsgetauthtokensample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/appcontainers/arm-appcontainers/samples/v2/javascript/managedEnvironmentsGetAuthTokenSample.js
[managedenvironmentsgetsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/appcontainers/arm-appcontainers/samples/v2/javascript/managedEnvironmentsGetSample.js
[managedenvironmentslistbyresourcegroupsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/appcontainers/arm-appcontainers/samples/v2/javascript/managedEnvironmentsListByResourceGroupSample.js
[managedenvironmentslistbysubscriptionsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/appcontainers/arm-appcontainers/samples/v2/javascript/managedEnvironmentsListBySubscriptionSample.js
[managedenvironmentslistworkloadprofilestatessample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/appcontainers/arm-appcontainers/samples/v2/javascript/managedEnvironmentsListWorkloadProfileStatesSample.js
[managedenvironmentsstoragescreateorupdatesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/appcontainers/arm-appcontainers/samples/v2/javascript/managedEnvironmentsStoragesCreateOrUpdateSample.js
[managedenvironmentsstoragesdeletesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/appcontainers/arm-appcontainers/samples/v2/javascript/managedEnvironmentsStoragesDeleteSample.js
[managedenvironmentsstoragesgetsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/appcontainers/arm-appcontainers/samples/v2/javascript/managedEnvironmentsStoragesGetSample.js
[managedenvironmentsstorageslistsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/appcontainers/arm-appcontainers/samples/v2/javascript/managedEnvironmentsStoragesListSample.js
[managedenvironmentsupdatesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/appcontainers/arm-appcontainers/samples/v2/javascript/managedEnvironmentsUpdateSample.js
[namespaceschecknameavailabilitysample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/appcontainers/arm-appcontainers/samples/v2/javascript/namespacesCheckNameAvailabilitySample.js
[operationslistsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/appcontainers/arm-appcontainers/samples/v2/javascript/operationsListSample.js
[usageslistsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/appcontainers/arm-appcontainers/samples/v2/javascript/usagesListSample.js
[apiref]: https://learn.microsoft.com/javascript/api/@azure/arm-appcontainers?view=azure-node-preview
[freesub]: https://azure.microsoft.com/free/
[package]: https://github.com/Azure/azure-sdk-for-js/tree/main/sdk/appcontainers/arm-appcontainers/README.md
