sdk/appcontainers/arm-appcontainers/samples/v4/javascript/README.md
# @azure/arm-appcontainers client library samples for JavaScript

These sample programs show how to use the JavaScript client libraries for @azure/arm-appcontainers in some common scenarios.

| **File Name**                                                                                                                           | **Description**                                                                                                                                                                      |
| --------------------------------------------------------------------------------------------------------------------------------------- | ------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------ |
| [availableEnvironmentModesListSample.js][availableenvironmentmodeslistsample]                                                           | gets the environment modes available to a subscription in a location. x-ms-original-file: 2026-07-01/AvailableEnvironmentModes_List.json                                             |
| [availableWorkloadProfilesListSample.js][availableworkloadprofileslistsample]                                                           | get all available workload profiles for a location. x-ms-original-file: 2026-07-01/AvailableWorkloadProfiles_Get.json                                                                |
| [billingMetersGetSample.js][billingmetersgetsample]                                                                                     | get all billingMeters for a location. x-ms-original-file: 2026-07-01/BillingMeters_Get.json                                                                                          |
| [certificatesCreateOrUpdateSample.js][certificatescreateorupdatesample]                                                                 | create or Update a Certificate. x-ms-original-file: 2026-07-01/Certificate_CreateOrUpdate.json                                                                                       |
| [certificatesDeleteSample.js][certificatesdeletesample]                                                                                 | deletes the specified Certificate. x-ms-original-file: 2026-07-01/Certificate_Delete.json                                                                                            |
| [certificatesGetSample.js][certificatesgetsample]                                                                                       | get the specified Certificate. x-ms-original-file: 2026-07-01/Certificate_Get.json                                                                                                   |
| [certificatesListSample.js][certificateslistsample]                                                                                     | get the Certificates in a given managed environment. x-ms-original-file: 2026-07-01/Certificates_ListByManagedEnvironment.json                                                       |
| [certificatesUpdateSample.js][certificatesupdatesample]                                                                                 | patches a certificate. Currently only patching of tags is supported x-ms-original-file: 2026-07-01/Certificates_Patch.json                                                           |
| [connectedEnvironmentsCertificatesCreateOrUpdateSample.js][connectedenvironmentscertificatescreateorupdatesample]                       | create or Update a Certificate. x-ms-original-file: 2026-07-01/ConnectedEnvironmentsCertificate_CreateOrUpdate.json                                                                  |
| [connectedEnvironmentsCertificatesDeleteSample.js][connectedenvironmentscertificatesdeletesample]                                       | deletes the specified Certificate. x-ms-original-file: 2026-07-01/ConnectedEnvironmentsCertificate_Delete.json                                                                       |
| [connectedEnvironmentsCertificatesGetSample.js][connectedenvironmentscertificatesgetsample]                                             | get the specified Certificate. x-ms-original-file: 2026-07-01/ConnectedEnvironmentsCertificate_Get.json                                                                              |
| [connectedEnvironmentsCertificatesListSample.js][connectedenvironmentscertificateslistsample]                                           | get the Certificates in a given connected environment. x-ms-original-file: 2026-07-01/ConnectedEnvironmentsCertificates_ListByConnectedEnvironment.json                              |
| [connectedEnvironmentsCertificatesUpdateSample.js][connectedenvironmentscertificatesupdatesample]                                       | patches a certificate. Currently only patching of tags is supported x-ms-original-file: 2026-07-01/ConnectedEnvironmentsCertificates_Patch.json                                      |
| [connectedEnvironmentsCheckNameAvailabilitySample.js][connectedenvironmentschecknameavailabilitysample]                                 | checks if resource connectedEnvironmentName is available. x-ms-original-file: 2026-07-01/ConnectedEnvironmentsCertificates_CheckNameAvailability.json                                |
| [connectedEnvironmentsCreateOrUpdateSample.js][connectedenvironmentscreateorupdatesample]                                               | creates or updates an connectedEnvironment. x-ms-original-file: 2026-07-01/ConnectedEnvironments_CreateOrUpdate.json                                                                 |
| [connectedEnvironmentsDaprComponentsCreateOrUpdateSample.js][connectedenvironmentsdaprcomponentscreateorupdatesample]                   | creates or updates a Dapr Component in a connected environment. x-ms-original-file: 2026-07-01/ConnectedEnvironmentsDaprComponents_CreateOrUpdate.json                               |
| [connectedEnvironmentsDaprComponentsDeleteSample.js][connectedenvironmentsdaprcomponentsdeletesample]                                   | delete a Dapr Component from a connected environment. x-ms-original-file: 2026-07-01/ConnectedEnvironmentsDaprComponents_Delete.json                                                 |
| [connectedEnvironmentsDaprComponentsGetSample.js][connectedenvironmentsdaprcomponentsgetsample]                                         | get a dapr component. x-ms-original-file: 2026-07-01/ConnectedEnvironmentsDaprComponents_Get.json                                                                                    |
| [connectedEnvironmentsDaprComponentsListSample.js][connectedenvironmentsdaprcomponentslistsample]                                       | get the Dapr Components for a connected environment. x-ms-original-file: 2026-07-01/ConnectedEnvironmentsDaprComponents_List.json                                                    |
| [connectedEnvironmentsDaprComponentsListSecretsSample.js][connectedenvironmentsdaprcomponentslistsecretssample]                         | list secrets for a dapr component x-ms-original-file: 2026-07-01/ConnectedEnvironmentsDaprComponents_ListSecrets.json                                                                |
| [connectedEnvironmentsDeleteSample.js][connectedenvironmentsdeletesample]                                                               | delete an connectedEnvironment. x-ms-original-file: 2026-07-01/ConnectedEnvironments_Delete.json                                                                                     |
| [connectedEnvironmentsGetSample.js][connectedenvironmentsgetsample]                                                                     | get the properties of an connectedEnvironment. x-ms-original-file: 2026-07-01/ConnectedEnvironments_Get.json                                                                         |
| [connectedEnvironmentsListByResourceGroupSample.js][connectedenvironmentslistbyresourcegroupsample]                                     | get all connectedEnvironments in a resource group. x-ms-original-file: 2026-07-01/ConnectedEnvironments_ListByResourceGroup.json                                                     |
| [connectedEnvironmentsListBySubscriptionSample.js][connectedenvironmentslistbysubscriptionsample]                                       | get all connectedEnvironments for a subscription. x-ms-original-file: 2026-07-01/ConnectedEnvironments_ListBySubscription.json                                                       |
| [connectedEnvironmentsStoragesCreateOrUpdateSample.js][connectedenvironmentsstoragescreateorupdatesample]                               | create or update storage for a connectedEnvironment. x-ms-original-file: 2026-07-01/ConnectedEnvironmentsStorages_CreateOrUpdate.json                                                |
| [connectedEnvironmentsStoragesDeleteSample.js][connectedenvironmentsstoragesdeletesample]                                               | delete storage for a connectedEnvironment. x-ms-original-file: 2026-07-01/ConnectedEnvironmentsStorages_Delete.json                                                                  |
| [connectedEnvironmentsStoragesGetSample.js][connectedenvironmentsstoragesgetsample]                                                     | get storage for a connectedEnvironment. x-ms-original-file: 2026-07-01/ConnectedEnvironmentsStorages_Get.json                                                                        |
| [connectedEnvironmentsStoragesListSample.js][connectedenvironmentsstorageslistsample]                                                   | get all storages for a connectedEnvironment. x-ms-original-file: 2026-07-01/ConnectedEnvironmentsStorages_List.json                                                                  |
| [connectedEnvironmentsUpdateSample.js][connectedenvironmentsupdatesample]                                                               | patches a Managed Environment. Only patching of tags is supported currently x-ms-original-file: 2026-07-01/ConnectedEnvironments_Patch.json                                          |
| [containerAppPrivateEndpointConnectionsCreateOrUpdateSample.js][containerappprivateendpointconnectionscreateorupdatesample]             | creates a private endpoint connection or updates its connection state for a Container App. x-ms-original-file: 2026-07-01/ContainerAppPrivateEndpointConnections_CreateOrUpdate.json |
| [containerAppPrivateEndpointConnectionsDeleteSample.js][containerappprivateendpointconnectionsdeletesample]                             | deletes the specified private endpoint connection associated with a Container App. x-ms-original-file: 2026-07-01/ContainerAppPrivateEndpointConnections_Delete.json                 |
| [containerAppPrivateEndpointConnectionsGetSample.js][containerappprivateendpointconnectionsgetsample]                                   | gets the details of a private endpoint connection associated with a Container App. x-ms-original-file: 2026-07-01/ContainerAppPrivateEndpointConnections_Get.json                    |
| [containerAppPrivateEndpointConnectionsListSample.js][containerappprivateendpointconnectionslistsample]                                 | lists all private endpoint connections associated with a Container App. x-ms-original-file: 2026-07-01/ContainerAppPrivateEndpointConnections_List.json                              |
| [containerAppPrivateLinkResourcesGetSample.js][containerappprivatelinkresourcesgetsample]                                               | gets the details of a private link resource supported by a Container App. x-ms-original-file: 2026-07-01/ContainerAppPrivateLinkResources_Get.json                                   |
| [containerAppPrivateLinkResourcesListSample.js][containerappprivatelinkresourceslistsample]                                             | lists the private link resources supported by a Container App. x-ms-original-file: 2026-07-01/ContainerAppPrivateLinkResources_List.json                                             |
| [containerAppsAuthConfigsCreateOrUpdateSample.js][containerappsauthconfigscreateorupdatesample]                                         | create or update the AuthConfig for a Container App. x-ms-original-file: 2026-07-01/AuthConfigs_BlobStorageTokenStore_ClientId_CreateOrUpdate.json                                   |
| [containerAppsAuthConfigsDeleteSample.js][containerappsauthconfigsdeletesample]                                                         | delete a Container App AuthConfig. x-ms-original-file: 2026-07-01/AuthConfigs_Delete.json                                                                                            |
| [containerAppsAuthConfigsGetSample.js][containerappsauthconfigsgetsample]                                                               | get a AuthConfig of a Container App. x-ms-original-file: 2026-07-01/AuthConfigs_Get.json                                                                                             |
| [containerAppsAuthConfigsListByContainerAppSample.js][containerappsauthconfigslistbycontainerappsample]                                 | get the Container App AuthConfigs in a given resource group. x-ms-original-file: 2026-07-01/AuthConfigs_ListByContainer.json                                                         |
| [containerAppsCreateOrUpdateSample.js][containerappscreateorupdatesample]                                                               | create or update a Container App. x-ms-original-file: 2026-07-01/ContainerApps_CreateOrUpdate.json                                                                                   |
| [containerAppsDeleteSample.js][containerappsdeletesample]                                                                               | delete a Container App. x-ms-original-file: 2026-07-01/ContainerApps_Delete.json                                                                                                     |
| [containerAppsDiagnosticsGetDetectorSample.js][containerappsdiagnosticsgetdetectorsample]                                               | get a diagnostics result of a Container App. x-ms-original-file: 2026-07-01/ContainerAppsDiagnostics_Get.json                                                                        |
| [containerAppsDiagnosticsGetRevisionSample.js][containerappsdiagnosticsgetrevisionsample]                                               | get a revision of a Container App. x-ms-original-file: 2026-07-01/Revisions_Get1.json                                                                                                |
| [containerAppsDiagnosticsGetRootSample.js][containerappsdiagnosticsgetrootsample]                                                       | get the properties of a Container App. x-ms-original-file: 2026-07-01/ContainerApps_Get1.json                                                                                        |
| [containerAppsDiagnosticsListDetectorsSample.js][containerappsdiagnosticslistdetectorssample]                                           | get the list of diagnostics for a given Container App. x-ms-original-file: 2026-07-01/ContainerAppsDiagnostics_List.json                                                             |
| [containerAppsDiagnosticsListRevisionsSample.js][containerappsdiagnosticslistrevisionssample]                                           | a synchronous resource action. x-ms-original-file: 2026-07-01/Revisions_List1.json                                                                                                   |
| [containerAppsFunctionsGetSample.js][containerappsfunctionsgetsample]                                                                   | gets the details of a specific function from the latest Container App revision. x-ms-original-file: 2026-07-01/ContainerAppsFunctions_Get.json                                       |
| [containerAppsFunctionsListSample.js][containerappsfunctionslistsample]                                                                 | lists the functions available in the latest revision of a Container App. x-ms-original-file: 2026-07-01/ContainerAppsFunctions_List.json                                             |
| [containerAppsGetAuthTokenSample.js][containerappsgetauthtokensample]                                                                   | get auth token for a container app x-ms-original-file: 2026-07-01/ContainerApps_GetAuthToken.json                                                                                    |
| [containerAppsGetSample.js][containerappsgetsample]                                                                                     | get the properties of a Container App. x-ms-original-file: 2026-07-01/ContainerApps_Get.json                                                                                         |
| [containerAppsLabelHistoryDeleteLabelHistorySample.js][containerappslabelhistorydeletelabelhistorysample]                               | deletes the revision history associated with a Container App label. x-ms-original-file: 2026-07-01/LabelHistory_Delete.json                                                          |
| [containerAppsLabelHistoryGetLabelHistorySample.js][containerappslabelhistorygetlabelhistorysample]                                     | gets the revision history associated with a Container App label. x-ms-original-file: 2026-07-01/LabelHistory_Get.json                                                                |
| [containerAppsLabelHistoryListLabelHistorySample.js][containerappslabelhistorylistlabelhistorysample]                                   | lists the label revision histories for a Container App. x-ms-original-file: 2026-07-01/LabelHistory_List.json                                                                        |
| [containerAppsListByResourceGroupSample.js][containerappslistbyresourcegroupsample]                                                     | get the Container Apps in a given resource group. x-ms-original-file: 2026-07-01/ContainerApps_ListByResourceGroup.json                                                              |
| [containerAppsListBySubscriptionSample.js][containerappslistbysubscriptionsample]                                                       | get the Container Apps in a given subscription. x-ms-original-file: 2026-07-01/ContainerApps_ListBySubscription.json                                                                 |
| [containerAppsListCustomHostNameAnalysisSample.js][containerappslistcustomhostnameanalysissample]                                       | analyzes a custom hostname for a Container App x-ms-original-file: 2026-07-01/ContainerApps_ListCustomHostNameAnalysis.json                                                          |
| [containerAppsListSecretsSample.js][containerappslistsecretssample]                                                                     | list secrets for a container app x-ms-original-file: 2026-07-01/ContainerApps_ListSecrets.json                                                                                       |
| [containerAppsRevisionFunctionsGetSample.js][containerappsrevisionfunctionsgetsample]                                                   | gets the details of a specific function in a Container App revision. x-ms-original-file: 2026-07-01/ContainerAppsRevisionFunctions_Get.json                                          |
| [containerAppsRevisionFunctionsListSample.js][containerappsrevisionfunctionslistsample]                                                 | lists the functions available in a specific Container App revision. x-ms-original-file: 2026-07-01/ContainerAppsRevisionFunctions_List.json                                          |
| [containerAppsRevisionReplicasGetReplicaSample.js][containerappsrevisionreplicasgetreplicasample]                                       | get a replica for a Container App Revision. x-ms-original-file: 2026-07-01/Replicas_Get.json                                                                                         |
| [containerAppsRevisionReplicasListReplicasSample.js][containerappsrevisionreplicaslistreplicassample]                                   | list replicas for a Container App Revision. x-ms-original-file: 2026-07-01/Replicas_List.json                                                                                        |
| [containerAppsRevisionsActivateRevisionSample.js][containerappsrevisionsactivaterevisionsample]                                         | activates a revision for a Container App x-ms-original-file: 2026-07-01/Revisions_Activate.json                                                                                      |
| [containerAppsRevisionsDeactivateRevisionSample.js][containerappsrevisionsdeactivaterevisionsample]                                     | deactivates a revision for a Container App x-ms-original-file: 2026-07-01/Revisions_Deactivate.json                                                                                  |
| [containerAppsRevisionsGetRevisionSample.js][containerappsrevisionsgetrevisionsample]                                                   | get a revision of a Container App. x-ms-original-file: 2026-07-01/Revisions_Get.json                                                                                                 |
| [containerAppsRevisionsListRevisionsSample.js][containerappsrevisionslistrevisionssample]                                               | get the Revisions for a given Container App. x-ms-original-file: 2026-07-01/Revisions_List.json                                                                                      |
| [containerAppsRevisionsRestartRevisionSample.js][containerappsrevisionsrestartrevisionsample]                                           | restarts a revision for a Container App x-ms-original-file: 2026-07-01/Revisions_Restart.json                                                                                        |
| [containerAppsSessionPoolsCreateOrUpdateSample.js][containerappssessionpoolscreateorupdatesample]                                       | create or update a session pool with the given properties. x-ms-original-file: 2026-07-01/SessionPools_LifecycleOnContainerExit_CreateOrUpdate.json                                  |
| [containerAppsSessionPoolsDeleteSample.js][containerappssessionpoolsdeletesample]                                                       | delete the session pool with the given name. x-ms-original-file: 2026-07-01/SessionPools_Delete.json                                                                                 |
| [containerAppsSessionPoolsGetSample.js][containerappssessionpoolsgetsample]                                                             | get the properties of a session pool. x-ms-original-file: 2026-07-01/SessionPools_Get.json                                                                                           |
| [containerAppsSessionPoolsListByResourceGroupSample.js][containerappssessionpoolslistbyresourcegroupsample]                             | get the session pools in a given resource group of a subscription. x-ms-original-file: 2026-07-01/SessionPools_ListByResourceGroup.json                                              |
| [containerAppsSessionPoolsListBySubscriptionSample.js][containerappssessionpoolslistbysubscriptionsample]                               | get the session pools in a given subscription. x-ms-original-file: 2026-07-01/SessionPools_ListBySubscription.json                                                                   |
| [containerAppsSessionPoolsUpdateSample.js][containerappssessionpoolsupdatesample]                                                       | patches a session pool using JSON merge patch x-ms-original-file: 2026-07-01/SessionPools_Patch.json                                                                                 |
| [containerAppsSourceControlsCreateOrUpdateSample.js][containerappssourcecontrolscreateorupdatesample]                                   | create or update the SourceControl for a Container App. x-ms-original-file: 2026-07-01/SourceControls_CreateOrUpdate.json                                                            |
| [containerAppsSourceControlsDeleteSample.js][containerappssourcecontrolsdeletesample]                                                   | delete a Container App SourceControl. x-ms-original-file: 2026-07-01/SourceControls_Delete.json                                                                                      |
| [containerAppsSourceControlsGetSample.js][containerappssourcecontrolsgetsample]                                                         | get a SourceControl of a Container App. x-ms-original-file: 2026-07-01/SourceControls_Get.json                                                                                       |
| [containerAppsSourceControlsListByContainerAppSample.js][containerappssourcecontrolslistbycontainerappsample]                           | get the Container App SourceControls in a given resource group. x-ms-original-file: 2026-07-01/SourceControls_ListByContainer.json                                                   |
| [containerAppsStartSample.js][containerappsstartsample]                                                                                 | start a container app x-ms-original-file: 2026-07-01/ContainerApps_Start.json                                                                                                        |
| [containerAppsStopSample.js][containerappsstopsample]                                                                                   | stop a container app x-ms-original-file: 2026-07-01/ContainerApps_Stop.json                                                                                                          |
| [containerAppsUpdateSample.js][containerappsupdatesample]                                                                               | patches a Container App using JSON Merge Patch x-ms-original-file: 2026-07-01/ContainerApps_Patch.json                                                                               |
| [daprComponentResiliencyPoliciesCreateOrUpdateSample.js][daprcomponentresiliencypoliciescreateorupdatesample]                           | creates or updates a resiliency policy for a Dapr component. x-ms-original-file: 2026-07-01/DaprComponentResiliencyPolicy_CreateOrUpdate_AllOptions.json                             |
| [daprComponentResiliencyPoliciesDeleteSample.js][daprcomponentresiliencypoliciesdeletesample]                                           | delete a resiliency policy for a Dapr component. x-ms-original-file: 2026-07-01/DaprComponentResiliencyPolicies_Delete.json                                                          |
| [daprComponentResiliencyPoliciesGetSample.js][daprcomponentresiliencypoliciesgetsample]                                                 | gets the details of a resiliency policy for a Dapr component. x-ms-original-file: 2026-07-01/DaprComponentResiliencyPolicies_Get.json                                                |
| [daprComponentResiliencyPoliciesListSample.js][daprcomponentresiliencypolicieslistsample]                                               | lists the resiliency policies configured for a Dapr component. x-ms-original-file: 2026-07-01/DaprComponentResiliencyPolicies_List.json                                              |
| [daprComponentsCreateOrUpdateSample.js][daprcomponentscreateorupdatesample]                                                             | creates or updates a Dapr Component in a Managed Environment. x-ms-original-file: 2026-07-01/DaprComponents_CreateOrUpdate_SecretStoreComponent.json                                 |
| [daprComponentsDeleteSample.js][daprcomponentsdeletesample]                                                                             | delete a Dapr Component from a Managed Environment. x-ms-original-file: 2026-07-01/DaprComponents_Delete.json                                                                        |
| [daprComponentsGetSample.js][daprcomponentsgetsample]                                                                                   | get a dapr component. x-ms-original-file: 2026-07-01/DaprComponents_Get_SecretStoreComponent.json                                                                                    |
| [daprComponentsListSample.js][daprcomponentslistsample]                                                                                 | get the Dapr Components for a managed environment. x-ms-original-file: 2026-07-01/DaprComponents_List.json                                                                           |
| [daprComponentsListSecretsSample.js][daprcomponentslistsecretssample]                                                                   | list secrets for a dapr component x-ms-original-file: 2026-07-01/DaprComponents_ListSecrets.json                                                                                     |
| [dotNetComponentsCreateOrUpdateSample.js][dotnetcomponentscreateorupdatesample]                                                         | creates or updates a .NET Component in a Managed Environment. x-ms-original-file: 2026-07-01/DotNetComponents_CreateOrUpdate.json                                                    |
| [dotNetComponentsDeleteSample.js][dotnetcomponentsdeletesample]                                                                         | deletes a .NET component from a managed environment. x-ms-original-file: 2026-07-01/DotNetComponents_Delete.json                                                                     |
| [dotNetComponentsGetSample.js][dotnetcomponentsgetsample]                                                                               | gets the details of a .NET component in a managed environment. x-ms-original-file: 2026-07-01/DotNetComponents_Get.json                                                              |
| [dotNetComponentsListSample.js][dotnetcomponentslistsample]                                                                             | lists the .NET components in a managed environment. x-ms-original-file: 2026-07-01/DotNetComponents_List.json                                                                        |
| [dotNetComponentsUpdateSample.js][dotnetcomponentsupdatesample]                                                                         | patches a .NET Component using JSON Merge Patch x-ms-original-file: 2026-07-01/DotNetComponents_Patch.json                                                                           |
| [functionsExtensionInvokeFunctionsHostSample.js][functionsextensioninvokefunctionshostsample]                                           | proxies a Functions host call to the function app backed by the container app. x-ms-original-file: 2026-07-01/FunctionsExtension_Post.json                                           |
| [getCustomDomainVerificationIdSample.js][getcustomdomainverificationidsample]                                                           | get the verification id of a subscription used for verifying custom domains x-ms-original-file: 2026-07-01/Subscriptions_GetCustomDomainVerificationId.json                          |
| [httpRouteConfigCreateOrUpdateSample.js][httprouteconfigcreateorupdatesample]                                                           | create or Update a Http Route Config. x-ms-original-file: 2026-07-01/HttpRouteConfig_CreateOrUpdate.json                                                                             |
| [httpRouteConfigDeleteSample.js][httprouteconfigdeletesample]                                                                           | deletes the specified Managed Http Route. x-ms-original-file: 2026-07-01/HttpRouteConfig_Delete.json                                                                                 |
| [httpRouteConfigGetSample.js][httprouteconfiggetsample]                                                                                 | get the specified Managed Http Route Config. x-ms-original-file: 2026-07-01/HttpRouteConfig_Get.json                                                                                 |
| [httpRouteConfigListSample.js][httprouteconfiglistsample]                                                                               | get the Managed Http Routes in a given managed environment. x-ms-original-file: 2026-07-01/HttpRouteConfig_ListByManagedEnvironment.json                                             |
| [httpRouteConfigUpdateSample.js][httprouteconfigupdatesample]                                                                           | patches an http route config resource. Only patching of tags is supported x-ms-original-file: 2026-07-01/HttpRouteConfig_Patch.json                                                  |
| [javaComponentsCreateOrUpdateSample.js][javacomponentscreateorupdatesample]                                                             | creates or updates a Java Component in a Managed Environment. x-ms-original-file: 2026-07-01/JavaComponents_CreateOrUpdate.json                                                      |
| [javaComponentsDeleteSample.js][javacomponentsdeletesample]                                                                             | delete a Java Component. x-ms-original-file: 2026-07-01/JavaComponents_Delete.json                                                                                                   |
| [javaComponentsGetSample.js][javacomponentsgetsample]                                                                                   | get a Java Component. x-ms-original-file: 2026-07-01/JavaComponents_Get.json                                                                                                         |
| [javaComponentsListSample.js][javacomponentslistsample]                                                                                 | get the Java Components for a managed environment. x-ms-original-file: 2026-07-01/JavaComponents_List.json                                                                           |
| [javaComponentsUpdateSample.js][javacomponentsupdatesample]                                                                             | patches a Java Component using JSON Merge Patch x-ms-original-file: 2026-07-01/JavaComponents_Patch.json                                                                             |
| [jobExecutionSample.js][jobexecutionsample]                                                                                             | get details of a single job execution x-ms-original-file: 2026-07-01/Job_Execution_Get.json                                                                                          |
| [jobsCreateOrUpdateSample.js][jobscreateorupdatesample]                                                                                 | create or Update a Container Apps Job. x-ms-original-file: 2026-07-01/Job_CreateorUpdate.json                                                                                        |
| [jobsDeleteSample.js][jobsdeletesample]                                                                                                 | delete a Container Apps Job. x-ms-original-file: 2026-07-01/Job_Delete.json                                                                                                          |
| [jobsExecutionsListSample.js][jobsexecutionslistsample]                                                                                 | get a Container Apps Job's executions x-ms-original-file: 2026-07-01/Job_Executions_Get.json                                                                                         |
| [jobsGetDetectorSample.js][jobsgetdetectorsample]                                                                                       | get the diagnostics data for a Container App Job. x-ms-original-file: 2026-07-01/Job_GetDetector.json                                                                                |
| [jobsGetSample.js][jobsgetsample]                                                                                                       | get the properties of a Container Apps Job. x-ms-original-file: 2026-07-01/Job_Get.json                                                                                              |
| [jobsListByResourceGroupSample.js][jobslistbyresourcegroupsample]                                                                       | get the Container Apps Jobs in a given resource group. x-ms-original-file: 2026-07-01/Jobs_ListByResourceGroup.json                                                                  |
| [jobsListBySubscriptionSample.js][jobslistbysubscriptionsample]                                                                         | get the Container Apps Jobs in a given subscription. x-ms-original-file: 2026-07-01/Jobs_ListBySubscription.json                                                                     |
| [jobsListDetectorsSample.js][jobslistdetectorssample]                                                                                   | get the list of diagnostics for a Container App Job. x-ms-original-file: 2026-07-01/Job_ListDetectors.json                                                                           |
| [jobsListSecretsSample.js][jobslistsecretssample]                                                                                       | list secrets for a container apps job x-ms-original-file: 2026-07-01/Job_ListSecrets.json                                                                                            |
| [jobsProxyGetSample.js][jobsproxygetsample]                                                                                             | get the properties for a given Container App Job. x-ms-original-file: 2026-07-01/Job_ProxyGet.json                                                                                   |
| [jobsResumeSample.js][jobsresumesample]                                                                                                 | resumes execution for a suspended Container Apps job. x-ms-original-file: 2026-07-01/Jobs_Resume.json                                                                                |
| [jobsStartSample.js][jobsstartsample]                                                                                                   | start a Container Apps Job x-ms-original-file: 2026-07-01/Job_Start.json                                                                                                             |
| [jobsStopExecutionSample.js][jobsstopexecutionsample]                                                                                   | terminates execution of a running container apps job x-ms-original-file: 2026-07-01/Job_Stop_Execution.json                                                                          |
| [jobsStopMultipleExecutionsSample.js][jobsstopmultipleexecutionssample]                                                                 | terminates execution of a running container apps job x-ms-original-file: 2026-07-01/Job_Stop_Multiple.json                                                                           |
| [jobsSuspendSample.js][jobssuspendsample]                                                                                               | suspends execution for a running Container Apps job. x-ms-original-file: 2026-07-01/Jobs_Suspend.json                                                                                |
| [jobsUpdateSample.js][jobsupdatesample]                                                                                                 | patches a Container Apps Job using JSON Merge Patch x-ms-original-file: 2026-07-01/Job_Patch.json                                                                                    |
| [logicAppsCreateOrUpdateSample.js][logicappscreateorupdatesample]                                                                       | create or update a Logic App extension resource x-ms-original-file: 2026-07-01/LogicApps_Create.json                                                                                 |
| [logicAppsDeleteSample.js][logicappsdeletesample]                                                                                       | deletes a Logic App extension resource x-ms-original-file: 2026-07-01/LogicApps_Delete.json                                                                                          |
| [logicAppsGetSample.js][logicappsgetsample]                                                                                             | gets a logic app extension resource. x-ms-original-file: 2026-07-01/LogicApps_Get.json                                                                                               |
| [logicAppsGetWorkflowSample.js][logicappsgetworkflowsample]                                                                             | get workflow information by its name x-ms-original-file: 2026-07-01/LogicApps_GetWorkflow.json                                                                                       |
| [logicAppsListWorkflowsConnectionsSample.js][logicappslistworkflowsconnectionssample]                                                   | gets logic app's connections. x-ms-original-file: 2026-07-01/LogicApps_ListConnections.json                                                                                          |
| [logicAppsListWorkflowsSample.js][logicappslistworkflowssample]                                                                         | list the workflows for a logic app. x-ms-original-file: 2026-07-01/LogicApps_ListWorkflows.json                                                                                      |
| [maintenanceConfigurationsCreateOrUpdateSample.js][maintenanceconfigurationscreateorupdatesample]                                       | create or update the maintenance configuration for Managed Environment. x-ms-original-file: 2026-07-01/ManagedEnvironment_MaintenanceConfigurations_CreateOrUpdate.json              |
| [maintenanceConfigurationsDeleteSample.js][maintenanceconfigurationsdeletesample]                                                       | deletes the maintenance configuration of a ManagedEnvironment . x-ms-original-file: 2026-07-01/ManagedEnvironment_MaintenanceConfigurations_Delete.json                              |
| [maintenanceConfigurationsGetSample.js][maintenanceconfigurationsgetsample]                                                             | gets the maintenance configuration of a ManagedEnvironment . x-ms-original-file: 2026-07-01/ManagedEnvironment_MaintenanceConfigurations_Get.json                                    |
| [maintenanceConfigurationsListSample.js][maintenanceconfigurationslistsample]                                                           | gets all maintenance configurations in the specified Managed Environment. x-ms-original-file: 2026-07-01/ManagedEnvironment_MaintenanceConfigurations_List.json                      |
| [managedCertificatesCreateOrUpdateSample.js][managedcertificatescreateorupdatesample]                                                   | create or Update a Managed Certificate. x-ms-original-file: 2026-07-01/ManagedCertificate_CreateOrUpdate.json                                                                        |
| [managedCertificatesDeleteSample.js][managedcertificatesdeletesample]                                                                   | deletes the specified Managed Certificate. x-ms-original-file: 2026-07-01/ManagedCertificate_Delete.json                                                                             |
| [managedCertificatesGetSample.js][managedcertificatesgetsample]                                                                         | get the specified Managed Certificate. x-ms-original-file: 2026-07-01/ManagedCertificate_Get.json                                                                                    |
| [managedCertificatesListSample.js][managedcertificateslistsample]                                                                       | get the Managed Certificates in a given managed environment. x-ms-original-file: 2026-07-01/ManagedCertificates_ListByManagedEnvironment.json                                        |
| [managedCertificatesUpdateSample.js][managedcertificatesupdatesample]                                                                   | patches a managed certificate. Oly patching of tags is supported x-ms-original-file: 2026-07-01/ManagedCertificates_Patch.json                                                       |
| [managedEnvironmentDiagnosticsGetDetectorSample.js][managedenvironmentdiagnosticsgetdetectorsample]                                     | get the diagnostics data for a Managed Environment used to host container apps. x-ms-original-file: 2026-07-01/ManagedEnvironmentDiagnostics_Get.json                                |
| [managedEnvironmentDiagnosticsListDetectorsSample.js][managedenvironmentdiagnosticslistdetectorssample]                                 | get the list of diagnostics for a Managed Environment used to host container apps. x-ms-original-file: 2026-07-01/ManagedEnvironmentDiagnostics_List.json                            |
| [managedEnvironmentPrivateEndpointConnectionsCreateOrUpdateSample.js][managedenvironmentprivateendpointconnectionscreateorupdatesample] | update the state of a private endpoint connection for a given managed environment. x-ms-original-file: 2026-07-01/ManagedEnvironmentPrivateEndpointConnections_CreateOrUpdate.json   |
| [managedEnvironmentPrivateEndpointConnectionsDeleteSample.js][managedenvironmentprivateendpointconnectionsdeletesample]                 | delete a private endpoint connection for a given managed environment. x-ms-original-file: 2026-07-01/ManagedEnvironmentPrivateEndpointConnections_Delete.json                        |
| [managedEnvironmentPrivateEndpointConnectionsGetSample.js][managedenvironmentprivateendpointconnectionsgetsample]                       | get a private endpoint connection for a given managed environment. x-ms-original-file: 2026-07-01/ManagedEnvironmentPrivateEndpointConnections_Get.json                              |
| [managedEnvironmentPrivateEndpointConnectionsListSample.js][managedenvironmentprivateendpointconnectionslistsample]                     | list private endpoint connections for a given managed environment. x-ms-original-file: 2026-07-01/ManagedEnvironmentPrivateEndpointConnections_List.json                             |
| [managedEnvironmentPrivateLinkResourcesGetSample.js][managedenvironmentprivatelinkresourcesgetsample]                                   | gets the details of a private link resource supported by a managed environment. x-ms-original-file: 2026-07-01/ManagedEnvironmentPrivateLinkResources_Get.json                       |
| [managedEnvironmentPrivateLinkResourcesListSample.js][managedenvironmentprivatelinkresourceslistsample]                                 | list private link resources for a given managed environment. x-ms-original-file: 2026-07-01/ManagedEnvironmentPrivateLinkResources_List.json                                         |
| [managedEnvironmentUsagesListSample.js][managedenvironmentusageslistsample]                                                             | gets the current usage information as well as the limits for environment. x-ms-original-file: 2026-07-01/ManagedEnvironmentUsages_List.json                                          |
| [managedEnvironmentsCheckMigrationEligibilitySample.js][managedenvironmentscheckmigrationeligibilitysample]                             | checks whether a Managed Environment can be migrated to a target mode. x-ms-original-file: 2026-07-01/ManagedEnvironments_CheckMigrationEligibility.json                             |
| [managedEnvironmentsCreateOrUpdateSample.js][managedenvironmentscreateorupdatesample]                                                   | creates or updates a Managed Environment used to host container apps. x-ms-original-file: 2026-07-01/ManagedEnvironments_CreateOrUpdate.json                                         |
| [managedEnvironmentsDeleteSample.js][managedenvironmentsdeletesample]                                                                   | delete a Managed Environment if it does not have any container apps. x-ms-original-file: 2026-07-01/ManagedEnvironments_Delete.json                                                  |
| [managedEnvironmentsDiagnosticsGetRootSample.js][managedenvironmentsdiagnosticsgetrootsample]                                           | get the properties of a Managed Environment used to host container apps. x-ms-original-file: 2026-07-01/ManagedEnvironments_Get1.json                                                |
| [managedEnvironmentsGetAuthTokenSample.js][managedenvironmentsgetauthtokensample]                                                       | checks if resource name is available. x-ms-original-file: 2026-07-01/ManagedEnvironments_GetAuthToken.json                                                                           |
| [managedEnvironmentsGetSample.js][managedenvironmentsgetsample]                                                                         | get the properties of a Managed Environment used to host container apps. x-ms-original-file: 2026-07-01/ManagedEnvironments_Get.json                                                 |
| [managedEnvironmentsListByResourceGroupSample.js][managedenvironmentslistbyresourcegroupsample]                                         | get all the Managed Environments in a resource group. x-ms-original-file: 2026-07-01/ManagedEnvironments_ListByResourceGroup.json                                                    |
| [managedEnvironmentsListBySubscriptionSample.js][managedenvironmentslistbysubscriptionsample]                                           | get all Managed Environments for a subscription. x-ms-original-file: 2026-07-01/ManagedEnvironments_ListBySubscription.json                                                          |
| [managedEnvironmentsListWorkloadProfileStatesSample.js][managedenvironmentslistworkloadprofilestatessample]                             | get all workload Profile States for a Managed Environment. x-ms-original-file: 2026-07-01/ManagedEnvironments_ListWorkloadProfileStates.json                                         |
| [managedEnvironmentsStoragesCreateOrUpdateSample.js][managedenvironmentsstoragescreateorupdatesample]                                   | create or update storage for a managedEnvironment. x-ms-original-file: 2026-07-01/ManagedEnvironmentsStorages_CreateOrUpdate.json                                                    |
| [managedEnvironmentsStoragesDeleteSample.js][managedenvironmentsstoragesdeletesample]                                                   | delete storage for a managedEnvironment. x-ms-original-file: 2026-07-01/ManagedEnvironmentsStorages_Delete.json                                                                      |
| [managedEnvironmentsStoragesGetSample.js][managedenvironmentsstoragesgetsample]                                                         | get storage for a managedEnvironment. x-ms-original-file: 2026-07-01/ManagedEnvironmentsStorages_Get.json                                                                            |
| [managedEnvironmentsStoragesListSample.js][managedenvironmentsstorageslistsample]                                                       | get all storages for a managedEnvironment. x-ms-original-file: 2026-07-01/ManagedEnvironmentsStorages_List.json                                                                      |
| [managedEnvironmentsUpdateSample.js][managedenvironmentsupdatesample]                                                                   | patches a Managed Environment using JSON Merge Patch x-ms-original-file: 2026-07-01/ManagedEnvironments_Patch.json                                                                   |
| [namespacesCheckNameAvailabilitySample.js][namespaceschecknameavailabilitysample]                                                       | checks if resource name is available. x-ms-original-file: 2026-07-01/Certificates_CheckNameAvailability.json                                                                         |
| [operationsListSample.js][operationslistsample]                                                                                         | lists all of the available RP operations. x-ms-original-file: 2026-07-01/Operations_List.json                                                                                        |
| [sandboxGroupsCreateOrUpdateSample.js][sandboxgroupscreateorupdatesample]                                                               | create or update a SandboxGroup. x-ms-original-file: 2026-07-01/SandboxGroups_CreateOrUpdate.json                                                                                    |
| [sandboxGroupsDeleteSample.js][sandboxgroupsdeletesample]                                                                               | delete a SandboxGroup. x-ms-original-file: 2026-07-01/SandboxGroups_Delete.json                                                                                                      |
| [sandboxGroupsGetSample.js][sandboxgroupsgetsample]                                                                                     | get the properties of a SandboxGroup. x-ms-original-file: 2026-07-01/SandboxGroups_Get.json                                                                                          |
| [sandboxGroupsListByResourceGroupSample.js][sandboxgroupslistbyresourcegroupsample]                                                     | get all SandboxGroups in a resource group. x-ms-original-file: 2026-07-01/SandboxGroups_ListByResourceGroup.json                                                                     |
| [sandboxGroupsListBySubscriptionSample.js][sandboxgroupslistbysubscriptionsample]                                                       | get all SandboxGroups for a subscription. x-ms-original-file: 2026-07-01/SandboxGroups_ListBySubscription.json                                                                       |
| [sandboxGroupsUpdateSample.js][sandboxgroupsupdatesample]                                                                               | patches a SandboxGroup. x-ms-original-file: 2026-07-01/SandboxGroups_Update.json                                                                                                     |
| [usagesListSample.js][usageslistsample]                                                                                                 | gets, for the specified location, the current resource usage information as well as the limits under the subscription. x-ms-original-file: 2026-07-01/Usages_List.json               |
| [vnetConnectionsCreateOrUpdateSample.js][vnetconnectionscreateorupdatesample]                                                           | create or update a VnetConnection. x-ms-original-file: 2026-07-01/VnetConnections_CreateOrUpdate.json                                                                                |
| [vnetConnectionsDeleteSample.js][vnetconnectionsdeletesample]                                                                           | delete a VnetConnection. x-ms-original-file: 2026-07-01/VnetConnections_Delete.json                                                                                                  |
| [vnetConnectionsGetSample.js][vnetconnectionsgetsample]                                                                                 | get the properties of a VnetConnection. x-ms-original-file: 2026-07-01/VnetConnections_Get.json                                                                                      |
| [vnetConnectionsListBySandboxGroupSample.js][vnetconnectionslistbysandboxgroupsample]                                                   | list all VnetConnections in the specified SandboxGroup. x-ms-original-file: 2026-07-01/VnetConnections_ListBySandboxGroup.json                                                       |

## Prerequisites

The sample programs are compatible with [LTS versions of Node.js](https://github.com/nodejs/release#release-schedule).

You need [an Azure subscription][freesub] to run these sample programs.

Samples retrieve credentials to access the service endpoint from environment variables. Alternatively, edit the source code to include the appropriate credentials. See each individual sample for details on which environment variables/credentials it requires to function.

Adapting the samples to run in the browser may require some additional consideration. For details, please see the [package README][package].

## Setup

To run the samples using the published version of the package:

1. Install the dependencies using `npm`:

```bash
npm install
```

2. Edit the file `sample.env`, adding the correct credentials to access the Azure service and run the samples. Then rename the file from `sample.env` to just `.env`. The sample programs will read this file automatically.

3. Run whichever samples you like (note that some samples may require additional setup, see the table above):

```bash
node availableEnvironmentModesListSample.js
```

Alternatively, run a single sample with the required environment variables set (setting up the `.env` file is not required if you do this), for example (cross-platform):

```bash
node availableEnvironmentModesListSample.js
```

## Next Steps

Take a look at our [API Documentation][apiref] for more information about the APIs that are available in the clients.

[availableenvironmentmodeslistsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/appcontainers/arm-appcontainers/samples/v4/javascript/availableEnvironmentModesListSample.js
[availableworkloadprofileslistsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/appcontainers/arm-appcontainers/samples/v4/javascript/availableWorkloadProfilesListSample.js
[billingmetersgetsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/appcontainers/arm-appcontainers/samples/v4/javascript/billingMetersGetSample.js
[certificatescreateorupdatesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/appcontainers/arm-appcontainers/samples/v4/javascript/certificatesCreateOrUpdateSample.js
[certificatesdeletesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/appcontainers/arm-appcontainers/samples/v4/javascript/certificatesDeleteSample.js
[certificatesgetsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/appcontainers/arm-appcontainers/samples/v4/javascript/certificatesGetSample.js
[certificateslistsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/appcontainers/arm-appcontainers/samples/v4/javascript/certificatesListSample.js
[certificatesupdatesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/appcontainers/arm-appcontainers/samples/v4/javascript/certificatesUpdateSample.js
[connectedenvironmentscertificatescreateorupdatesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/appcontainers/arm-appcontainers/samples/v4/javascript/connectedEnvironmentsCertificatesCreateOrUpdateSample.js
[connectedenvironmentscertificatesdeletesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/appcontainers/arm-appcontainers/samples/v4/javascript/connectedEnvironmentsCertificatesDeleteSample.js
[connectedenvironmentscertificatesgetsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/appcontainers/arm-appcontainers/samples/v4/javascript/connectedEnvironmentsCertificatesGetSample.js
[connectedenvironmentscertificateslistsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/appcontainers/arm-appcontainers/samples/v4/javascript/connectedEnvironmentsCertificatesListSample.js
[connectedenvironmentscertificatesupdatesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/appcontainers/arm-appcontainers/samples/v4/javascript/connectedEnvironmentsCertificatesUpdateSample.js
[connectedenvironmentschecknameavailabilitysample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/appcontainers/arm-appcontainers/samples/v4/javascript/connectedEnvironmentsCheckNameAvailabilitySample.js
[connectedenvironmentscreateorupdatesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/appcontainers/arm-appcontainers/samples/v4/javascript/connectedEnvironmentsCreateOrUpdateSample.js
[connectedenvironmentsdaprcomponentscreateorupdatesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/appcontainers/arm-appcontainers/samples/v4/javascript/connectedEnvironmentsDaprComponentsCreateOrUpdateSample.js
[connectedenvironmentsdaprcomponentsdeletesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/appcontainers/arm-appcontainers/samples/v4/javascript/connectedEnvironmentsDaprComponentsDeleteSample.js
[connectedenvironmentsdaprcomponentsgetsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/appcontainers/arm-appcontainers/samples/v4/javascript/connectedEnvironmentsDaprComponentsGetSample.js
[connectedenvironmentsdaprcomponentslistsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/appcontainers/arm-appcontainers/samples/v4/javascript/connectedEnvironmentsDaprComponentsListSample.js
[connectedenvironmentsdaprcomponentslistsecretssample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/appcontainers/arm-appcontainers/samples/v4/javascript/connectedEnvironmentsDaprComponentsListSecretsSample.js
[connectedenvironmentsdeletesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/appcontainers/arm-appcontainers/samples/v4/javascript/connectedEnvironmentsDeleteSample.js
[connectedenvironmentsgetsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/appcontainers/arm-appcontainers/samples/v4/javascript/connectedEnvironmentsGetSample.js
[connectedenvironmentslistbyresourcegroupsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/appcontainers/arm-appcontainers/samples/v4/javascript/connectedEnvironmentsListByResourceGroupSample.js
[connectedenvironmentslistbysubscriptionsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/appcontainers/arm-appcontainers/samples/v4/javascript/connectedEnvironmentsListBySubscriptionSample.js
[connectedenvironmentsstoragescreateorupdatesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/appcontainers/arm-appcontainers/samples/v4/javascript/connectedEnvironmentsStoragesCreateOrUpdateSample.js
[connectedenvironmentsstoragesdeletesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/appcontainers/arm-appcontainers/samples/v4/javascript/connectedEnvironmentsStoragesDeleteSample.js
[connectedenvironmentsstoragesgetsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/appcontainers/arm-appcontainers/samples/v4/javascript/connectedEnvironmentsStoragesGetSample.js
[connectedenvironmentsstorageslistsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/appcontainers/arm-appcontainers/samples/v4/javascript/connectedEnvironmentsStoragesListSample.js
[connectedenvironmentsupdatesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/appcontainers/arm-appcontainers/samples/v4/javascript/connectedEnvironmentsUpdateSample.js
[containerappprivateendpointconnectionscreateorupdatesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/appcontainers/arm-appcontainers/samples/v4/javascript/containerAppPrivateEndpointConnectionsCreateOrUpdateSample.js
[containerappprivateendpointconnectionsdeletesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/appcontainers/arm-appcontainers/samples/v4/javascript/containerAppPrivateEndpointConnectionsDeleteSample.js
[containerappprivateendpointconnectionsgetsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/appcontainers/arm-appcontainers/samples/v4/javascript/containerAppPrivateEndpointConnectionsGetSample.js
[containerappprivateendpointconnectionslistsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/appcontainers/arm-appcontainers/samples/v4/javascript/containerAppPrivateEndpointConnectionsListSample.js
[containerappprivatelinkresourcesgetsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/appcontainers/arm-appcontainers/samples/v4/javascript/containerAppPrivateLinkResourcesGetSample.js
[containerappprivatelinkresourceslistsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/appcontainers/arm-appcontainers/samples/v4/javascript/containerAppPrivateLinkResourcesListSample.js
[containerappsauthconfigscreateorupdatesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/appcontainers/arm-appcontainers/samples/v4/javascript/containerAppsAuthConfigsCreateOrUpdateSample.js
[containerappsauthconfigsdeletesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/appcontainers/arm-appcontainers/samples/v4/javascript/containerAppsAuthConfigsDeleteSample.js
[containerappsauthconfigsgetsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/appcontainers/arm-appcontainers/samples/v4/javascript/containerAppsAuthConfigsGetSample.js
[containerappsauthconfigslistbycontainerappsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/appcontainers/arm-appcontainers/samples/v4/javascript/containerAppsAuthConfigsListByContainerAppSample.js
[containerappscreateorupdatesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/appcontainers/arm-appcontainers/samples/v4/javascript/containerAppsCreateOrUpdateSample.js
[containerappsdeletesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/appcontainers/arm-appcontainers/samples/v4/javascript/containerAppsDeleteSample.js
[containerappsdiagnosticsgetdetectorsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/appcontainers/arm-appcontainers/samples/v4/javascript/containerAppsDiagnosticsGetDetectorSample.js
[containerappsdiagnosticsgetrevisionsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/appcontainers/arm-appcontainers/samples/v4/javascript/containerAppsDiagnosticsGetRevisionSample.js
[containerappsdiagnosticsgetrootsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/appcontainers/arm-appcontainers/samples/v4/javascript/containerAppsDiagnosticsGetRootSample.js
[containerappsdiagnosticslistdetectorssample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/appcontainers/arm-appcontainers/samples/v4/javascript/containerAppsDiagnosticsListDetectorsSample.js
[containerappsdiagnosticslistrevisionssample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/appcontainers/arm-appcontainers/samples/v4/javascript/containerAppsDiagnosticsListRevisionsSample.js
[containerappsfunctionsgetsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/appcontainers/arm-appcontainers/samples/v4/javascript/containerAppsFunctionsGetSample.js
[containerappsfunctionslistsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/appcontainers/arm-appcontainers/samples/v4/javascript/containerAppsFunctionsListSample.js
[containerappsgetauthtokensample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/appcontainers/arm-appcontainers/samples/v4/javascript/containerAppsGetAuthTokenSample.js
[containerappsgetsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/appcontainers/arm-appcontainers/samples/v4/javascript/containerAppsGetSample.js
[containerappslabelhistorydeletelabelhistorysample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/appcontainers/arm-appcontainers/samples/v4/javascript/containerAppsLabelHistoryDeleteLabelHistorySample.js
[containerappslabelhistorygetlabelhistorysample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/appcontainers/arm-appcontainers/samples/v4/javascript/containerAppsLabelHistoryGetLabelHistorySample.js
[containerappslabelhistorylistlabelhistorysample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/appcontainers/arm-appcontainers/samples/v4/javascript/containerAppsLabelHistoryListLabelHistorySample.js
[containerappslistbyresourcegroupsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/appcontainers/arm-appcontainers/samples/v4/javascript/containerAppsListByResourceGroupSample.js
[containerappslistbysubscriptionsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/appcontainers/arm-appcontainers/samples/v4/javascript/containerAppsListBySubscriptionSample.js
[containerappslistcustomhostnameanalysissample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/appcontainers/arm-appcontainers/samples/v4/javascript/containerAppsListCustomHostNameAnalysisSample.js
[containerappslistsecretssample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/appcontainers/arm-appcontainers/samples/v4/javascript/containerAppsListSecretsSample.js
[containerappsrevisionfunctionsgetsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/appcontainers/arm-appcontainers/samples/v4/javascript/containerAppsRevisionFunctionsGetSample.js
[containerappsrevisionfunctionslistsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/appcontainers/arm-appcontainers/samples/v4/javascript/containerAppsRevisionFunctionsListSample.js
[containerappsrevisionreplicasgetreplicasample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/appcontainers/arm-appcontainers/samples/v4/javascript/containerAppsRevisionReplicasGetReplicaSample.js
[containerappsrevisionreplicaslistreplicassample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/appcontainers/arm-appcontainers/samples/v4/javascript/containerAppsRevisionReplicasListReplicasSample.js
[containerappsrevisionsactivaterevisionsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/appcontainers/arm-appcontainers/samples/v4/javascript/containerAppsRevisionsActivateRevisionSample.js
[containerappsrevisionsdeactivaterevisionsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/appcontainers/arm-appcontainers/samples/v4/javascript/containerAppsRevisionsDeactivateRevisionSample.js
[containerappsrevisionsgetrevisionsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/appcontainers/arm-appcontainers/samples/v4/javascript/containerAppsRevisionsGetRevisionSample.js
[containerappsrevisionslistrevisionssample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/appcontainers/arm-appcontainers/samples/v4/javascript/containerAppsRevisionsListRevisionsSample.js
[containerappsrevisionsrestartrevisionsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/appcontainers/arm-appcontainers/samples/v4/javascript/containerAppsRevisionsRestartRevisionSample.js
[containerappssessionpoolscreateorupdatesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/appcontainers/arm-appcontainers/samples/v4/javascript/containerAppsSessionPoolsCreateOrUpdateSample.js
[containerappssessionpoolsdeletesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/appcontainers/arm-appcontainers/samples/v4/javascript/containerAppsSessionPoolsDeleteSample.js
[containerappssessionpoolsgetsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/appcontainers/arm-appcontainers/samples/v4/javascript/containerAppsSessionPoolsGetSample.js
[containerappssessionpoolslistbyresourcegroupsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/appcontainers/arm-appcontainers/samples/v4/javascript/containerAppsSessionPoolsListByResourceGroupSample.js
[containerappssessionpoolslistbysubscriptionsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/appcontainers/arm-appcontainers/samples/v4/javascript/containerAppsSessionPoolsListBySubscriptionSample.js
[containerappssessionpoolsupdatesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/appcontainers/arm-appcontainers/samples/v4/javascript/containerAppsSessionPoolsUpdateSample.js
[containerappssourcecontrolscreateorupdatesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/appcontainers/arm-appcontainers/samples/v4/javascript/containerAppsSourceControlsCreateOrUpdateSample.js
[containerappssourcecontrolsdeletesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/appcontainers/arm-appcontainers/samples/v4/javascript/containerAppsSourceControlsDeleteSample.js
[containerappssourcecontrolsgetsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/appcontainers/arm-appcontainers/samples/v4/javascript/containerAppsSourceControlsGetSample.js
[containerappssourcecontrolslistbycontainerappsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/appcontainers/arm-appcontainers/samples/v4/javascript/containerAppsSourceControlsListByContainerAppSample.js
[containerappsstartsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/appcontainers/arm-appcontainers/samples/v4/javascript/containerAppsStartSample.js
[containerappsstopsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/appcontainers/arm-appcontainers/samples/v4/javascript/containerAppsStopSample.js
[containerappsupdatesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/appcontainers/arm-appcontainers/samples/v4/javascript/containerAppsUpdateSample.js
[daprcomponentresiliencypoliciescreateorupdatesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/appcontainers/arm-appcontainers/samples/v4/javascript/daprComponentResiliencyPoliciesCreateOrUpdateSample.js
[daprcomponentresiliencypoliciesdeletesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/appcontainers/arm-appcontainers/samples/v4/javascript/daprComponentResiliencyPoliciesDeleteSample.js
[daprcomponentresiliencypoliciesgetsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/appcontainers/arm-appcontainers/samples/v4/javascript/daprComponentResiliencyPoliciesGetSample.js
[daprcomponentresiliencypolicieslistsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/appcontainers/arm-appcontainers/samples/v4/javascript/daprComponentResiliencyPoliciesListSample.js
[daprcomponentscreateorupdatesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/appcontainers/arm-appcontainers/samples/v4/javascript/daprComponentsCreateOrUpdateSample.js
[daprcomponentsdeletesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/appcontainers/arm-appcontainers/samples/v4/javascript/daprComponentsDeleteSample.js
[daprcomponentsgetsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/appcontainers/arm-appcontainers/samples/v4/javascript/daprComponentsGetSample.js
[daprcomponentslistsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/appcontainers/arm-appcontainers/samples/v4/javascript/daprComponentsListSample.js
[daprcomponentslistsecretssample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/appcontainers/arm-appcontainers/samples/v4/javascript/daprComponentsListSecretsSample.js
[dotnetcomponentscreateorupdatesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/appcontainers/arm-appcontainers/samples/v4/javascript/dotNetComponentsCreateOrUpdateSample.js
[dotnetcomponentsdeletesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/appcontainers/arm-appcontainers/samples/v4/javascript/dotNetComponentsDeleteSample.js
[dotnetcomponentsgetsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/appcontainers/arm-appcontainers/samples/v4/javascript/dotNetComponentsGetSample.js
[dotnetcomponentslistsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/appcontainers/arm-appcontainers/samples/v4/javascript/dotNetComponentsListSample.js
[dotnetcomponentsupdatesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/appcontainers/arm-appcontainers/samples/v4/javascript/dotNetComponentsUpdateSample.js
[functionsextensioninvokefunctionshostsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/appcontainers/arm-appcontainers/samples/v4/javascript/functionsExtensionInvokeFunctionsHostSample.js
[getcustomdomainverificationidsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/appcontainers/arm-appcontainers/samples/v4/javascript/getCustomDomainVerificationIdSample.js
[httprouteconfigcreateorupdatesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/appcontainers/arm-appcontainers/samples/v4/javascript/httpRouteConfigCreateOrUpdateSample.js
[httprouteconfigdeletesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/appcontainers/arm-appcontainers/samples/v4/javascript/httpRouteConfigDeleteSample.js
[httprouteconfiggetsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/appcontainers/arm-appcontainers/samples/v4/javascript/httpRouteConfigGetSample.js
[httprouteconfiglistsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/appcontainers/arm-appcontainers/samples/v4/javascript/httpRouteConfigListSample.js
[httprouteconfigupdatesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/appcontainers/arm-appcontainers/samples/v4/javascript/httpRouteConfigUpdateSample.js
[javacomponentscreateorupdatesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/appcontainers/arm-appcontainers/samples/v4/javascript/javaComponentsCreateOrUpdateSample.js
[javacomponentsdeletesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/appcontainers/arm-appcontainers/samples/v4/javascript/javaComponentsDeleteSample.js
[javacomponentsgetsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/appcontainers/arm-appcontainers/samples/v4/javascript/javaComponentsGetSample.js
[javacomponentslistsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/appcontainers/arm-appcontainers/samples/v4/javascript/javaComponentsListSample.js
[javacomponentsupdatesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/appcontainers/arm-appcontainers/samples/v4/javascript/javaComponentsUpdateSample.js
[jobexecutionsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/appcontainers/arm-appcontainers/samples/v4/javascript/jobExecutionSample.js
[jobscreateorupdatesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/appcontainers/arm-appcontainers/samples/v4/javascript/jobsCreateOrUpdateSample.js
[jobsdeletesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/appcontainers/arm-appcontainers/samples/v4/javascript/jobsDeleteSample.js
[jobsexecutionslistsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/appcontainers/arm-appcontainers/samples/v4/javascript/jobsExecutionsListSample.js
[jobsgetdetectorsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/appcontainers/arm-appcontainers/samples/v4/javascript/jobsGetDetectorSample.js
[jobsgetsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/appcontainers/arm-appcontainers/samples/v4/javascript/jobsGetSample.js
[jobslistbyresourcegroupsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/appcontainers/arm-appcontainers/samples/v4/javascript/jobsListByResourceGroupSample.js
[jobslistbysubscriptionsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/appcontainers/arm-appcontainers/samples/v4/javascript/jobsListBySubscriptionSample.js
[jobslistdetectorssample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/appcontainers/arm-appcontainers/samples/v4/javascript/jobsListDetectorsSample.js
[jobslistsecretssample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/appcontainers/arm-appcontainers/samples/v4/javascript/jobsListSecretsSample.js
[jobsproxygetsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/appcontainers/arm-appcontainers/samples/v4/javascript/jobsProxyGetSample.js
[jobsresumesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/appcontainers/arm-appcontainers/samples/v4/javascript/jobsResumeSample.js
[jobsstartsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/appcontainers/arm-appcontainers/samples/v4/javascript/jobsStartSample.js
[jobsstopexecutionsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/appcontainers/arm-appcontainers/samples/v4/javascript/jobsStopExecutionSample.js
[jobsstopmultipleexecutionssample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/appcontainers/arm-appcontainers/samples/v4/javascript/jobsStopMultipleExecutionsSample.js
[jobssuspendsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/appcontainers/arm-appcontainers/samples/v4/javascript/jobsSuspendSample.js
[jobsupdatesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/appcontainers/arm-appcontainers/samples/v4/javascript/jobsUpdateSample.js
[logicappscreateorupdatesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/appcontainers/arm-appcontainers/samples/v4/javascript/logicAppsCreateOrUpdateSample.js
[logicappsdeletesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/appcontainers/arm-appcontainers/samples/v4/javascript/logicAppsDeleteSample.js
[logicappsgetsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/appcontainers/arm-appcontainers/samples/v4/javascript/logicAppsGetSample.js
[logicappsgetworkflowsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/appcontainers/arm-appcontainers/samples/v4/javascript/logicAppsGetWorkflowSample.js
[logicappslistworkflowsconnectionssample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/appcontainers/arm-appcontainers/samples/v4/javascript/logicAppsListWorkflowsConnectionsSample.js
[logicappslistworkflowssample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/appcontainers/arm-appcontainers/samples/v4/javascript/logicAppsListWorkflowsSample.js
[maintenanceconfigurationscreateorupdatesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/appcontainers/arm-appcontainers/samples/v4/javascript/maintenanceConfigurationsCreateOrUpdateSample.js
[maintenanceconfigurationsdeletesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/appcontainers/arm-appcontainers/samples/v4/javascript/maintenanceConfigurationsDeleteSample.js
[maintenanceconfigurationsgetsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/appcontainers/arm-appcontainers/samples/v4/javascript/maintenanceConfigurationsGetSample.js
[maintenanceconfigurationslistsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/appcontainers/arm-appcontainers/samples/v4/javascript/maintenanceConfigurationsListSample.js
[managedcertificatescreateorupdatesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/appcontainers/arm-appcontainers/samples/v4/javascript/managedCertificatesCreateOrUpdateSample.js
[managedcertificatesdeletesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/appcontainers/arm-appcontainers/samples/v4/javascript/managedCertificatesDeleteSample.js
[managedcertificatesgetsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/appcontainers/arm-appcontainers/samples/v4/javascript/managedCertificatesGetSample.js
[managedcertificateslistsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/appcontainers/arm-appcontainers/samples/v4/javascript/managedCertificatesListSample.js
[managedcertificatesupdatesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/appcontainers/arm-appcontainers/samples/v4/javascript/managedCertificatesUpdateSample.js
[managedenvironmentdiagnosticsgetdetectorsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/appcontainers/arm-appcontainers/samples/v4/javascript/managedEnvironmentDiagnosticsGetDetectorSample.js
[managedenvironmentdiagnosticslistdetectorssample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/appcontainers/arm-appcontainers/samples/v4/javascript/managedEnvironmentDiagnosticsListDetectorsSample.js
[managedenvironmentprivateendpointconnectionscreateorupdatesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/appcontainers/arm-appcontainers/samples/v4/javascript/managedEnvironmentPrivateEndpointConnectionsCreateOrUpdateSample.js
[managedenvironmentprivateendpointconnectionsdeletesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/appcontainers/arm-appcontainers/samples/v4/javascript/managedEnvironmentPrivateEndpointConnectionsDeleteSample.js
[managedenvironmentprivateendpointconnectionsgetsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/appcontainers/arm-appcontainers/samples/v4/javascript/managedEnvironmentPrivateEndpointConnectionsGetSample.js
[managedenvironmentprivateendpointconnectionslistsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/appcontainers/arm-appcontainers/samples/v4/javascript/managedEnvironmentPrivateEndpointConnectionsListSample.js
[managedenvironmentprivatelinkresourcesgetsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/appcontainers/arm-appcontainers/samples/v4/javascript/managedEnvironmentPrivateLinkResourcesGetSample.js
[managedenvironmentprivatelinkresourceslistsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/appcontainers/arm-appcontainers/samples/v4/javascript/managedEnvironmentPrivateLinkResourcesListSample.js
[managedenvironmentusageslistsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/appcontainers/arm-appcontainers/samples/v4/javascript/managedEnvironmentUsagesListSample.js
[managedenvironmentscheckmigrationeligibilitysample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/appcontainers/arm-appcontainers/samples/v4/javascript/managedEnvironmentsCheckMigrationEligibilitySample.js
[managedenvironmentscreateorupdatesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/appcontainers/arm-appcontainers/samples/v4/javascript/managedEnvironmentsCreateOrUpdateSample.js
[managedenvironmentsdeletesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/appcontainers/arm-appcontainers/samples/v4/javascript/managedEnvironmentsDeleteSample.js
[managedenvironmentsdiagnosticsgetrootsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/appcontainers/arm-appcontainers/samples/v4/javascript/managedEnvironmentsDiagnosticsGetRootSample.js
[managedenvironmentsgetauthtokensample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/appcontainers/arm-appcontainers/samples/v4/javascript/managedEnvironmentsGetAuthTokenSample.js
[managedenvironmentsgetsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/appcontainers/arm-appcontainers/samples/v4/javascript/managedEnvironmentsGetSample.js
[managedenvironmentslistbyresourcegroupsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/appcontainers/arm-appcontainers/samples/v4/javascript/managedEnvironmentsListByResourceGroupSample.js
[managedenvironmentslistbysubscriptionsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/appcontainers/arm-appcontainers/samples/v4/javascript/managedEnvironmentsListBySubscriptionSample.js
[managedenvironmentslistworkloadprofilestatessample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/appcontainers/arm-appcontainers/samples/v4/javascript/managedEnvironmentsListWorkloadProfileStatesSample.js
[managedenvironmentsstoragescreateorupdatesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/appcontainers/arm-appcontainers/samples/v4/javascript/managedEnvironmentsStoragesCreateOrUpdateSample.js
[managedenvironmentsstoragesdeletesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/appcontainers/arm-appcontainers/samples/v4/javascript/managedEnvironmentsStoragesDeleteSample.js
[managedenvironmentsstoragesgetsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/appcontainers/arm-appcontainers/samples/v4/javascript/managedEnvironmentsStoragesGetSample.js
[managedenvironmentsstorageslistsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/appcontainers/arm-appcontainers/samples/v4/javascript/managedEnvironmentsStoragesListSample.js
[managedenvironmentsupdatesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/appcontainers/arm-appcontainers/samples/v4/javascript/managedEnvironmentsUpdateSample.js
[namespaceschecknameavailabilitysample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/appcontainers/arm-appcontainers/samples/v4/javascript/namespacesCheckNameAvailabilitySample.js
[operationslistsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/appcontainers/arm-appcontainers/samples/v4/javascript/operationsListSample.js
[sandboxgroupscreateorupdatesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/appcontainers/arm-appcontainers/samples/v4/javascript/sandboxGroupsCreateOrUpdateSample.js
[sandboxgroupsdeletesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/appcontainers/arm-appcontainers/samples/v4/javascript/sandboxGroupsDeleteSample.js
[sandboxgroupsgetsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/appcontainers/arm-appcontainers/samples/v4/javascript/sandboxGroupsGetSample.js
[sandboxgroupslistbyresourcegroupsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/appcontainers/arm-appcontainers/samples/v4/javascript/sandboxGroupsListByResourceGroupSample.js
[sandboxgroupslistbysubscriptionsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/appcontainers/arm-appcontainers/samples/v4/javascript/sandboxGroupsListBySubscriptionSample.js
[sandboxgroupsupdatesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/appcontainers/arm-appcontainers/samples/v4/javascript/sandboxGroupsUpdateSample.js
[usageslistsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/appcontainers/arm-appcontainers/samples/v4/javascript/usagesListSample.js
[vnetconnectionscreateorupdatesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/appcontainers/arm-appcontainers/samples/v4/javascript/vnetConnectionsCreateOrUpdateSample.js
[vnetconnectionsdeletesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/appcontainers/arm-appcontainers/samples/v4/javascript/vnetConnectionsDeleteSample.js
[vnetconnectionsgetsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/appcontainers/arm-appcontainers/samples/v4/javascript/vnetConnectionsGetSample.js
[vnetconnectionslistbysandboxgroupsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/appcontainers/arm-appcontainers/samples/v4/javascript/vnetConnectionsListBySandboxGroupSample.js
[apiref]: https://learn.microsoft.com/javascript/api/@azure/arm-appcontainers
[freesub]: https://azure.microsoft.com/free/
[package]: https://github.com/Azure/azure-sdk-for-js/tree/main/sdk/appcontainers/arm-appcontainers/README.md
